[lang] updated language files from Transifex

--- a/resource.language.da_dk/resources/strings.po
+++ b/resource.language.da_dk/resources/strings.po
@@ -7961,6 +7961,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Klientprioriteter"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Se timer"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Rediger timeroptagelse"
@@ -8204,6 +8208,10 @@ msgstr "Horisontale kanaler uden gruppevælger"
 msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Vil du optage det valgte program eller skifte til det aktuelle program?"
+
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Se timer-regel"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -12725,6 +12733,10 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Tryk på alle analoge knapper nu for at registrere dem:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Hent alle"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Indstillinger for driver"
@@ -13060,6 +13072,14 @@ msgstr "Fuldskærm"
 msgctxt "#35233"
 msgid "Stretch mode"
 msgstr "Strækket tilstand"
+
+msgctxt "#35235"
+msgid "Press {0:s} to open the in-game menu."
+msgstr "Tryk på {0:s} for at åbne spillets menu."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "I denne version kan der udelukkende benyttes controllere til at spille spil."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13444,10 +13464,6 @@ msgstr "Kategori indeholdende indstillinger for håndtering af videobiblioteket.
 msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Vælg hvilken temperaturenhed der bruges til at vise temperaturer i brugerfladen."
-
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Vis plottet for usete medier i videobiblioteket."
 
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
