--- a/resource.language.de_de/resources/strings.po
+++ b/resource.language.de_de/resources/strings.po
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Priorität der Clients"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Timer ansehen"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Timer bearbeiten"
@@ -8217,9 +8221,9 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Die selektierte Sendung aufnehmen oder zum Sender wechseln?"
 
-msgctxt "#19303"
-msgid "Use simple timeshift OSD"
-msgstr "Einfache Timeshift UI"
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Timer-Regel ansehen"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -10663,7 +10667,7 @@ msgstr "Anzahl Untertitel"
 
 msgctxt "#21483"
 msgid "View"
-msgstr "Ansicht"
+msgstr "Ansehen"
 
 msgctxt "#21602"
 msgid "(External)"
@@ -12149,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Verkehrsfunk"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS für Verkehrsinformationen nutzen"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Lautstärke bei Verkehrsmeldungen erhöhen"
@@ -13585,10 +13593,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Auswahl der Maßeinheit, die für die Anzeige von Temperaturen in der Benutzeroberfläche verwendet werden soll."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Handlung für ungesehene Videos der Bibliothek anzeigen."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Auswahl der Maßeinheit, die für die Anzeige von Geschwindigkeiten in der Benutzeroberfläche verwendet werden soll."
@@ -13961,10 +13965,6 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Länge von Sofortaufnahmen. Dieser Wert wird auch berücksichtigt, wenn \"Sofortaufnahme-Aktion\" auf \"Eine festgelegte Zeit lang aufnehmen\" eingestellt ist"
 
-msgctxt "#36235"
-msgid "Normal timeshift OSD always shows the complete timeshift buffer along with with the currently playing show, whereas the simple timeshift OSD only shows the currently playing show with no visual feedback how far in the timeshift buffer you can jump from the currently playing position."
-msgstr "Die Timeshift UI stellt immer den kompletten Timeshift-Puffer gemeinsam mit der aktuellen Sendung dar Die einfache Timeshift UI stellt nur die gerade laufende Sendung dat, ohne Anzeige, wie weit man im Timeshift-Puffer vor oder zurück springen könnte."
-
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Zusätzliche Aufnahmezeit vor Start der Sendung, um eventuelle kleinere Sendezeitverschiebungen auszugleichen. Nicht von allen Addons und Backends unterstützt."
@@ -14284,10 +14284,6 @@ msgstr "UPnP-Clients über manuelle oder automatische Bibliotheksaktualisierunge
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Aktiviert den UPnP-Client. Dies ermöglicht es, Medien von beliebigen UPnP-Servern mit einem UPnP Control Point zu empfangen und deren Wiedergabe zu steuern."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Aktiviert den UPnP Control Point. Dies erlaubt, Medien zu beliebigen UPnP-Clients zu schicken und deren Wiedergabe zu steueren."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
