--- a/resource.language.el_gr/resources/strings.po
+++ b/resource.language.el_gr/resources/strings.po
@@ -1113,6 +1113,10 @@ msgctxt "#306"
 msgid "Non-interleaved"
 msgstr "Χωρίς πλέξη"
 
+msgctxt "#307"
+msgid "Media default"
+msgstr "Η προκαθορισμένη του πολυμέσου"
+
 msgctxt "#308"
 msgid "Original language"
 msgstr "Αρχική γλώσσα"
@@ -1124,6 +1128,10 @@ msgstr "Γλώσσα περιβάλλοντος"
 msgctxt "#310"
 msgid "Keyboard layouts"
 msgstr "Διατάξεις πληκτρολογίου"
+
+msgctxt "#311"
+msgid "{0:s} {1:s}"
+msgstr "{0:s} {1:s}"
 
 msgctxt "#312"
 msgid "(0=auto)"
@@ -1865,6 +1873,10 @@ msgctxt "#505"
 msgid "Loading media information from files..."
 msgstr "Φόρτωση πληροφοριών μέσων από αρχεία..."
 
+msgctxt "#506"
+msgid "Checking media files..."
+msgstr "Έλεγχος των αρχείων πολυμέσων..."
+
 msgctxt "#507"
 msgid "Sort by: Usage"
 msgstr "Ταξ.: Χρήση"
@@ -2345,6 +2357,10 @@ msgctxt "#642"
 msgid "Files without ReplayGain information"
 msgstr "Αρχεία χωρίς ReplayGain πληροφορίες"
 
+msgctxt "#643"
+msgid "Avoid clipping protection on ReplayGained files"
+msgstr "Αποφυγή της αποκοπής της προστασίας στα αρχεία ReplayGain"
+
 msgctxt "#644"
 msgid "Stretch 16:9 - Nonlinear"
 msgstr "Επέκταση 16:9 - Μη γραμμικό"
@@ -2488,6 +2504,30 @@ msgstr "Αναλυτική καταγραφή για στοιχείο [B]Video[/
 msgctxt "#681"
 msgid "Verbose logging for the [B]Webserver[/B] component"
 msgstr "Αναλυτική καταγραφή για στοιχείο [B]Διακομιστή Δικτύου[/B]"
+
+msgctxt "#682"
+msgid "Verbose logging for the [B]Database[/B] component"
+msgstr "Αναλυτική καταγραφή για στοιχείο [B]Βάση δεδομένων[/B]"
+
+msgctxt "#683"
+msgid "Verbose logging of [B]audio/video timing information[/B]"
+msgstr "Αναλυτική καταγραφή για στοιχείο [B]πληροφορίες χρονισμού ήχου/βίντεο[/B]"
+
+msgctxt "#684"
+msgid "Verbose logging of [B]Windowing[/B] component"
+msgstr "Αναλυτική καταγραφή για στοιχείο [B]Παραθύρωση[/B]"
+
+msgctxt "#685"
+msgid "Verbose logging of [B]PVR[/B] component"
+msgstr "Αναλυτική καταγραφή για στοιχείο [B]PVR[/B]"
+
+msgctxt "#686"
+msgid "Verbose logging of [B]EPG[/B] component"
+msgstr "Αναλυτική καταγραφή για στοιχείο [B]EPG[/B]"
+
+msgctxt "#687"
+msgid "From metadata"
+msgstr "Από μεταδεδομένα"
 
 msgctxt "#700"
 msgid "Cleaning up library"
@@ -2641,6 +2681,14 @@ msgctxt "#744"
 msgid "Files"
 msgstr "Αρχεία"
 
+msgctxt "#745"
+msgid "Background colour"
+msgstr "Χρώμα παρασκηνίου"
+
+msgctxt "#746"
+msgid "Background opacity"
+msgstr "Αδιαφάνεια παρασκηνίου"
+
 msgctxt "#747"
 msgid "Error loading image"
 msgstr "Σφάλμα κατά τη φόρτωση της εικόνας"
@@ -2713,6 +2761,10 @@ msgctxt "#767"
 msgid "Grey"
 msgstr "Γκρι"
 
+msgctxt "#770"
+msgid "Error {0:d}: share not available"
+msgstr "Σφάλμα {0:d}: μη διαθέσιμος διαμοιρασμός"
+
 msgctxt "#772"
 msgid "Audio"
 msgstr "Ήχος"
@@ -2723,7 +2775,7 @@ msgstr "Αναζήτηση"
 
 msgctxt "#774"
 msgid "Slideshow folder"
-msgstr "Φάκελος παρουσίασης διαφανειών"
+msgstr "Φάκελος παρουσίασης διαποραμάτων"
 
 msgctxt "#775"
 msgid "Network interface"
@@ -3145,6 +3197,10 @@ msgctxt "#1041"
 msgid "Retrieved {0:d} items"
 msgstr "Ανακτήθηκαν %i αντικείμενα"
 
+msgctxt "#1042"
+msgid "Retrieved {0:d} of {1:d} items"
+msgstr "Ελήφθησαν {0:d} από {1:d} αντικείμενα"
+
 msgctxt "#1043"
 msgid "Program add-ons"
 msgstr "Πρόσθετες εφαρμογές"
@@ -3356,6 +3412,10 @@ msgstr "AirPlay"
 msgctxt "#1274"
 msgid "AirTunes"
 msgstr "AirTunes"
+
+msgctxt "#1275"
+msgid "Filter {0:s}"
+msgstr "Φίλτρο {0:s}"
 
 msgctxt "#1300"
 msgid "Custom audio device"
@@ -3657,6 +3717,10 @@ msgctxt "#1446"
 msgid "Unknown"
 msgstr "Άγνωστο"
 
+msgctxt "#1447"
+msgid "Squalls"
+msgstr "Λαίλαπα"
+
 msgctxt "#1448"
 msgid "Precipitation"
 msgstr "Υετός"
@@ -3721,6 +3785,10 @@ msgctxt "#10005"
 msgid "Not available"
 msgstr "Μη διαθέσιμος πόρος"
 
+msgctxt "#10006"
+msgid "N/A"
+msgstr "Α/Α"
+
 msgctxt "#10007"
 msgid "System information"
 msgstr "Πληροφορίες συστήματος"
@@ -3733,9 +3801,17 @@ msgctxt "#10016"
 msgid "Settings - System"
 msgstr "Ρυθμίσεις - Σύστημα"
 
+msgctxt "#10018"
+msgid "Settings - Service"
+msgstr "Ρυθμίσεις - Υπηρεσία"
+
 msgctxt "#10021"
 msgid "Settings - TV"
 msgstr "Ρυθμίσεις - Τηλεόραση"
+
+msgctxt "#10022"
+msgid "Settings - Games"
+msgstr "Ρυθμίσεις - Παιχνίδια"
 
 msgctxt "#10024"
 msgid "Titles"
@@ -3752,6 +3828,18 @@ msgstr "Βίντεο / Λίστα Αναπ/γής"
 msgctxt "#10029"
 msgid "Login screen"
 msgstr "Οθόνη σύνδεσης"
+
+msgctxt "#10030"
+msgid "Settings - Player"
+msgstr "Ρυθμίσεις - Αναπαραγωγέας"
+
+msgctxt "#10031"
+msgid "Settings - Media"
+msgstr "Ρυθμίσεις - Πολυμέσα"
+
+msgctxt "#10032"
+msgid "Settings - Interface"
+msgstr "Ρυθμίσεις - Περιβάλλον"
 
 msgctxt "#10034"
 msgid "Settings - Profiles"
@@ -3881,9 +3969,17 @@ msgctxt "#10109"
 msgid "Numeric Input"
 msgstr "Αριθμητική είσοδος"
 
+msgctxt "#10110"
+msgid "Gamepad input"
+msgstr "Είσοδος χειριστηρίου παιχνιδιών"
+
 msgctxt "#10111"
 msgid "Shutdown menu"
 msgstr "Μενού τερματισμού"
+
+msgctxt "#10114"
+msgid "Player controls"
+msgstr "Χειριστήρια αναπαραγωγέα"
 
 msgctxt "#10115"
 msgid "Seek bar"
@@ -3895,11 +3991,31 @@ msgstr "Πληροφορίες διεργασίας αναπαραγωγής"
 
 msgctxt "#10120"
 msgid "Music OSD"
-msgstr "Aπεικόνιση οθόνης (OSD) Μουσικής"
+msgstr "Απεικόνιση οθόνης (OSD) Μουσικής"
+
+msgctxt "#10122"
+msgid "Visualization preset list"
+msgstr "Κατάστιχο προρυθμίσεων αναπαράστασης"
+
+msgctxt "#10123"
+msgid "Video OSD settings"
+msgstr "Ρυθμίσεις OSD βίντεο"
+
+msgctxt "#10124"
+msgid "Audio OSD settings"
+msgstr "Ρυθμίσεις OSD ήχου"
+
+msgctxt "#10125"
+msgid "Video bookmarks"
+msgstr "Σελιδοδείκτες βίντεο"
 
 msgctxt "#10126"
 msgid "File browser"
 msgstr "Περιήγηση αρχείων"
+
+msgctxt "#10127"
+msgid "channels"
+msgstr "κανάλια"
 
 msgctxt "#10128"
 msgid "Network setup"
@@ -3925,6 +4041,10 @@ msgctxt "#10134"
 msgid "Favourites"
 msgstr "Αγαπημένα"
 
+msgctxt "#10135"
+msgid "Song info"
+msgstr "Πληρ. τραγουδιού"
+
 msgctxt "#10136"
 msgid "Smart playlist editor"
 msgstr "Επεξεργασία έξυπνης λίστας αναπ/γής"
@@ -3933,13 +4053,41 @@ msgctxt "#10137"
 msgid "Smart playlist rule editor"
 msgstr "Επεξεργασία κανόνων έξυπνης λίστας αναπ/γής"
 
+msgctxt "#10139"
+msgid "Picture info"
+msgstr "Πληροφορίες εικόνας"
+
 msgctxt "#10140"
 msgid "Add-on settings"
 msgstr "Ρυθμίσεις Πρόσθετου"
 
+msgctxt "#10142"
+msgid "Fullscreen info"
+msgstr "Πληροφορίες πλήρους οθόνης"
+
+msgctxt "#10145"
+msgid "Slider dialog"
+msgstr "Διάλογος με ολισθητή(ες)"
+
+msgctxt "#10146"
+msgid "Add-on info"
+msgstr "Πληροφορίες πρόσθετου"
+
+msgctxt "#10147"
+msgid "Text viewer"
+msgstr "Προβολέας κειμένου"
+
+msgctxt "#10150"
+msgid "Peripheral settings"
+msgstr "Ρυθμίσεις περιφερειακών"
+
 msgctxt "#10153"
 msgid "Subtitle search"
 msgstr "Αναζήτηση υποτίτλων"
+
+msgctxt "#10159"
+msgid "Subtitle OSD settings"
+msgstr "Ρυθμίσεις OSD υποτίτλων"
 
 msgctxt "#10210"
 msgid "Looking for subtitles..."
@@ -7537,6 +7685,10 @@ msgctxt "#19296"
 msgid "No PVR add-on enabled"
 msgstr "Κανένα PVR πρόσθετο δεν έχει ενεργοποιηθεί"
 
+msgctxt "#19299"
+msgid "Expires"
+msgstr "Λήγει"
+
 msgctxt "#19499"
 msgid "Other / Unknown"
 msgstr "Άλλο / Άγνωστο"
@@ -8005,6 +8157,10 @@ msgctxt "#20026"
 msgid "Region"
 msgstr "Περιοχή"
 
+msgctxt "#20036"
+msgid "{0:s} ({1:s})"
+msgstr "{0:s} ({1:s})"
+
 msgctxt "#20037"
 msgid "Summary"
 msgstr "Συνοπτικά"
@@ -8044,6 +8200,10 @@ msgstr "Είσοδος στη γενική διαχείριση"
 msgctxt "#20046"
 msgid "Leave master mode"
 msgstr "Έξοδος από τη γενική διαχείριση"
+
+msgctxt "#20047"
+msgid "Create profile '{0:s}'?"
+msgstr "Δημιουργία του προφίλ '{0:s}';"
 
 msgctxt "#20048"
 msgid "Start with fresh settings or copy from default?"
@@ -8285,9 +8445,17 @@ msgctxt "#20111"
 msgid "Autostart UPnP client"
 msgstr "Αυτόματη έναρξη πελάτη UPnP"
 
+msgctxt "#20112"
+msgid "Last login: {0:s}"
+msgstr "Τελευταία σύνδεση: {0:s}"
+
 msgctxt "#20113"
 msgid "Never logged on"
 msgstr "Ποτέ δε συνδέθηκε"
+
+msgctxt "#20114"
+msgid "Profile {0:d} / {1:d}"
+msgstr "Προφίλ {0:d} / {1:d}"
 
 msgctxt "#20115"
 msgid "User login / Select a profile"
@@ -8311,7 +8479,7 @@ msgstr "Φόρτωση πληροφοριών εφαρμογής"
 
 msgctxt "#20121"
 msgid "Party on!"
-msgstr "Party on!"
+msgstr "Η γιορτή ξεκινά!"
 
 msgctxt "#20122"
 msgid "True"
@@ -8335,7 +8503,7 @@ msgstr "Αποσύνδεση"
 
 msgctxt "#20129"
 msgid "Weave"
-msgstr "Weave"
+msgstr "Ύφανση"
 
 msgctxt "#20130"
 msgid "Weave - Inverted"
@@ -8343,7 +8511,7 @@ msgstr "Ύφανση - Αντιστροφή"
 
 msgctxt "#20131"
 msgid "Blend"
-msgstr "Blend"
+msgstr "Ανάμιξη"
 
 msgctxt "#20132"
 msgid "Restart video"
@@ -8372,6 +8540,10 @@ msgstr "Προσάρτηση μονάδας μνήμης"
 msgctxt "#20138"
 msgid "Unable to mount memory unit"
 msgstr "Αδύνατη η προσάρτηση μονάδας μνήμης"
+
+msgctxt "#20139"
+msgid "In port {0:d}, slot {1:d}"
+msgstr "Στην θύρα {0:d}, υποδοχή {1:d}"
 
 msgctxt "#20140"
 msgid "Lock screensaver"
