--- a/resource.language.en_nz/resources/strings.po
+++ b/resource.language.en_nz/resources/strings.po
@@ -1113,6 +1113,10 @@ msgctxt "#306"
 msgid "Non-interleaved"
 msgstr "Non-interleaved"
 
+msgctxt "#307"
+msgid "Media default"
+msgstr "Media default"
+
 msgctxt "#308"
 msgid "Original language"
 msgstr "Original language"
@@ -1168,6 +1172,14 @@ msgstr "Cleaning artists..."
 msgctxt "#321"
 msgid "Error cleaning artists"
 msgstr "Error cleaning artists"
+
+msgctxt "#322"
+msgid "Cleaning genres, roles etc...."
+msgstr "Cleaning genres, roles etc...."
+
+msgctxt "#323"
+msgid "Error cleaning genres, roles etc."
+msgstr "Error cleaning genres, roles etc."
 
 msgctxt "#324"
 msgid "Cleaning paths..."
@@ -1861,6 +1873,10 @@ msgctxt "#505"
 msgid "Loading media information from files..."
 msgstr "Loading media information from files..."
 
+msgctxt "#506"
+msgid "Checking media files..."
+msgstr "Checking media files..."
+
 msgctxt "#507"
 msgid "Sort by: Usage"
 msgstr "Sort by: Usage"
@@ -2489,6 +2505,30 @@ msgctxt "#681"
 msgid "Verbose logging for the [B]Webserver[/B] component"
 msgstr "Verbose logging for the [B]Webserver[/B] component"
 
+msgctxt "#682"
+msgid "Verbose logging for the [B]Database[/B] component"
+msgstr "Verbose logging for the [B]Database[/B] component"
+
+msgctxt "#683"
+msgid "Verbose logging of [B]audio/video timing information[/B]"
+msgstr "Verbose logging of [B]audio/video timing information[/B]"
+
+msgctxt "#684"
+msgid "Verbose logging of [B]Windowing[/B] component"
+msgstr "Verbose logging of [B]Windowing[/B] component"
+
+msgctxt "#685"
+msgid "Verbose logging of [B]PVR[/B] component"
+msgstr "Verbose logging of [B]PVR[/B] component"
+
+msgctxt "#686"
+msgid "Verbose logging of [B]EPG[/B] component"
+msgstr "Verbose logging of [B]EPG[/B] component"
+
+msgctxt "#687"
+msgid "From metadata"
+msgstr "From metadata"
+
 msgctxt "#700"
 msgid "Cleaning up library"
 msgstr "Cleaning up library"
@@ -2577,6 +2617,10 @@ msgctxt "#728"
 msgid "FTP server"
 msgstr "FTP server"
 
+msgctxt "#729"
+msgid "Enable SSL"
+msgstr "Enable SSL"
+
 msgctxt "#730"
 msgid "Port"
 msgstr "Port"
@@ -2636,6 +2680,14 @@ msgstr "Yellow"
 msgctxt "#744"
 msgid "Files"
 msgstr "Files"
+
+msgctxt "#745"
+msgid "Background colour"
+msgstr "Background colour"
+
+msgctxt "#746"
+msgid "Background opacity"
+msgstr "Background opacity"
 
 msgctxt "#747"
 msgid "Error loading image"
@@ -3733,6 +3785,10 @@ msgctxt "#10005"
 msgid "Not available"
 msgstr "Not available"
 
+msgctxt "#10006"
+msgid "N/A"
+msgstr "N/A"
+
 msgctxt "#10007"
 msgid "System information"
 msgstr "System information"
@@ -3745,9 +3801,17 @@ msgctxt "#10016"
 msgid "Settings - System"
 msgstr "Settings - System"
 
+msgctxt "#10018"
+msgid "Settings - Service"
+msgstr "Settings - Service"
+
 msgctxt "#10021"
 msgid "Settings - TV"
 msgstr "Settings - TV"
+
+msgctxt "#10022"
+msgid "Settings - Games"
+msgstr "Settings - Games"
 
 msgctxt "#10024"
 msgid "Titles"
@@ -3765,9 +3829,25 @@ msgctxt "#10029"
 msgid "Login screen"
 msgstr "Login screen"
 
+msgctxt "#10030"
+msgid "Settings - Player"
+msgstr "Settings - Player"
+
+msgctxt "#10031"
+msgid "Settings - Media"
+msgstr "Settings - Media"
+
+msgctxt "#10032"
+msgid "Settings - Interface"
+msgstr "Settings - Interface"
+
 msgctxt "#10034"
 msgid "Settings - Profiles"
 msgstr "Settings - Profiles"
+
+msgctxt "#10035"
+msgid "Skin Settings"
+msgstr "Skin Settings"
 
 msgctxt "#10036"
 msgid "Basic"
@@ -3857,6 +3937,54 @@ msgctxt "#10057"
 msgid "Edit file source"
 msgstr "Edit file source"
 
+msgctxt "#10099"
+msgid "Pointer"
+msgstr "Pointer"
+
+msgctxt "#10100"
+msgid "Yes / No dialog"
+msgstr "Yes / No dialogue"
+
+msgctxt "#10101"
+msgid "Progress dialog"
+msgstr "Progress dialogue"
+
+msgctxt "#10103"
+msgid "Virtual keyboard"
+msgstr "Virtual keyboard"
+
+msgctxt "#10104"
+msgid "Volume bar"
+msgstr "Volume bar"
+
+msgctxt "#10106"
+msgid "Context menu"
+msgstr "Context menu"
+
+msgctxt "#10107"
+msgid "Notification dialog"
+msgstr "Notification dialogue"
+
+msgctxt "#10109"
+msgid "Numeric Input"
+msgstr "Numeric Input"
+
+msgctxt "#10110"
+msgid "Gamepad input"
+msgstr "Gamepad input"
+
+msgctxt "#10111"
+msgid "Shutdown menu"
+msgstr "Shutdown menu"
+
+msgctxt "#10114"
+msgid "Player controls"
+msgstr "Player controls"
+
+msgctxt "#10115"
+msgid "Seek bar"
+msgstr "Seek bar"
+
 msgctxt "#10116"
 msgid "Player process info"
 msgstr "Player process info"
@@ -3865,9 +3993,29 @@ msgctxt "#10120"
 msgid "Music OSD"
 msgstr "Music OSD"
 
+msgctxt "#10122"
+msgid "Visualization preset list"
+msgstr "Visualisation preset list"
+
+msgctxt "#10123"
+msgid "Video OSD settings"
+msgstr "Video OSD settings"
+
+msgctxt "#10124"
+msgid "Audio OSD settings"
+msgstr "Audio OSD settings"
+
+msgctxt "#10125"
+msgid "Video bookmarks"
+msgstr "Video bookmarks"
+
 msgctxt "#10126"
 msgid "File browser"
 msgstr "File browser"
+
+msgctxt "#10127"
+msgid "channels"
+msgstr "channels"
 
 msgctxt "#10128"
 msgid "Network setup"
@@ -3893,6 +4041,10 @@ msgctxt "#10134"
 msgid "Favourites"
 msgstr "Favourites"
 
+msgctxt "#10135"
+msgid "Song info"
+msgstr "Song info"
+
 msgctxt "#10136"
 msgid "Smart playlist editor"
 msgstr "Smart playlist editor"
@@ -3901,9 +4053,53 @@ msgctxt "#10137"
 msgid "Smart playlist rule editor"
 msgstr "Smart playlist rule editor"
 
+msgctxt "#10139"
+msgid "Picture info"
+msgstr "Picture info"
+
 msgctxt "#10140"
 msgid "Add-on settings"
 msgstr "Add-on settings"
+
+msgctxt "#10142"
+msgid "Fullscreen info"
+msgstr "Fullscreen info"
+
+msgctxt "#10145"
+msgid "Slider dialog"
+msgstr "Slider dialogue"
+
+msgctxt "#10146"
+msgid "Add-on info"
+msgstr "Add-on info"
+
+msgctxt "#10147"
+msgid "Text viewer"
+msgstr "Text viewer"
+
+msgctxt "#10150"
+msgid "Peripheral settings"
+msgstr "Peripheral settings"
+
+msgctxt "#10151"
+msgid "Extended progress dialog"
+msgstr "Extended progress dialogue"
+
+msgctxt "#10152"
+msgid "Media filter"
+msgstr "Media filter"
+
+msgctxt "#10153"
+msgid "Subtitle search"
+msgstr "Subtitle search"
+
+msgctxt "#10157"
+msgid "OSD CMS settings"
+msgstr "OSD CMS settings"
+
+msgctxt "#10159"
+msgid "Subtitle OSD settings"
+msgstr "Subtitle OSD settings"
 
 msgctxt "#10210"
 msgid "Looking for subtitles..."
@@ -3932,6 +4128,10 @@ msgstr "Music playlist"
 msgctxt "#10502"
 msgid "Music"
 msgstr "Music"
+
+msgctxt "#10503"
+msgid "Music playlist editor"
+msgstr "Music playlist editor"
 
 msgctxt "#10504"
 msgid "Top 100 songs"
@@ -3989,25 +4189,145 @@ msgctxt "#10550"
 msgid "Teletext"
 msgstr "Teletext"
 
+msgctxt "#10600"
+msgid "PVR guide info"
+msgstr "PVR guide info"
+
+msgctxt "#10601"
+msgid "PVR recording info"
+msgstr "PVR recording info"
+
+msgctxt "#10602"
+msgid "PVR timer setting"
+msgstr "PVR timer setting"
+
+msgctxt "#10603"
+msgid "PVR group manager"
+msgstr "PVR group manager"
+
+msgctxt "#10604"
+msgid "PVR channel manager"
+msgstr "PVR channel manager"
+
+msgctxt "#10605"
+msgid "PVR guide search"
+msgstr "PVR guide search"
+
+msgctxt "#10606"
+msgid "PVR channel scan"
+msgstr "PVR channel scan"
+
+msgctxt "#10607"
+msgid "PVR update progress"
+msgstr "PVR update progress"
+
+msgctxt "#10608"
+msgid "PVR OSD channels"
+msgstr "PVR OSD channels"
+
+msgctxt "#10609"
+msgid "PVR OSD guide"
+msgstr "PVR OSD guide"
+
+msgctxt "#10610"
+msgid "PVR radio RDS info"
+msgstr "PVR radio RDS info"
+
+msgctxt "#10611"
+msgid "PVR recording setting"
+msgstr "PVR recording setting"
+
 msgctxt "#10700"
 msgid "TV channels"
 msgstr "TV channels"
+
+msgctxt "#10701"
+msgid "TV recordings"
+msgstr "TV recordings"
 
 msgctxt "#10702"
 msgid "TV guide"
 msgstr "TV guide"
 
+msgctxt "#10703"
+msgid "TV timers"
+msgstr "TV timers"
+
+msgctxt "#10704"
+msgid "TV search"
+msgstr "TV search"
+
 msgctxt "#10705"
 msgid "Radio channels"
 msgstr "Radio channels"
+
+msgctxt "#10706"
+msgid "Radio recordings"
+msgstr "Radio recordings"
 
 msgctxt "#10707"
 msgid "Radio guide"
 msgstr "Radio guide"
 
+msgctxt "#10708"
+msgid "Radio timers"
+msgstr "Radio timers"
+
+msgctxt "#10709"
+msgid "Radio search"
+msgstr "Radio search"
+
+msgctxt "#10710"
+msgid "TV timer rules"
+msgstr "TV timer rules"
+
+msgctxt "#10711"
+msgid "Radio timer rules"
+msgstr "Radio timer rules"
+
+msgctxt "#10800"
+msgid "Fullscreen live TV"
+msgstr "Fullscreen live TV"
+
+msgctxt "#10801"
+msgid "Fullscreen radio"
+msgstr "Fullscreen radio"
+
+msgctxt "#10820"
+msgid "Game video filter"
+msgstr "Game video filter"
+
 msgctxt "#10821"
 msgid "Games"
 msgstr "Games"
+
+msgctxt "#10822"
+msgid "Game OSD"
+msgstr "Game OSD"
+
+msgctxt "#10823"
+msgid "Game controllers"
+msgstr "Game controllers"
+
+msgctxt "#10824"
+msgid "Game video settings"
+msgstr "Game video settings"
+
+msgctxt "#12000"
+msgid "Select dialog"
+msgstr "Select dialogue"
+
+msgctxt "#12001"
+msgid "Music info"
+msgstr "Music info"
+
+msgctxt "#12002"
+msgid "OK dialog"
+msgstr "OK dialogue"
+
+msgctxt "#12003"
+msgid "Video info"
+msgstr "Video info"
 
 msgctxt "#12005"
 msgid "Fullscreen video"
@@ -4308,6 +4628,14 @@ msgstr "Screensaver"
 msgctxt "#12901"
 msgid "Fullscreen OSD"
 msgstr "Fullscreen OSD"
+
+msgctxt "#12906"
+msgid "Fullscreen game"
+msgstr "Fullscreen game"
+
+msgctxt "#12999"
+msgid "Startup"
+msgstr "Startup"
 
 msgctxt "#13000"
 msgid "System"
@@ -5053,6 +5381,10 @@ msgctxt "#13395"
 msgid "Video settings"
 msgstr "Video settings"
 
+msgctxt "#13396"
+msgid "Audio settings"
+msgstr "Audio settings"
+
 msgctxt "#13397"
 msgid "Enable subtitles"
 msgstr "Enable subtitles"
@@ -5173,6 +5505,10 @@ msgctxt "#13429"
 msgid "Allow hardware acceleration - VTBDecoder"
 msgstr "Allow hardware acceleration - VTBDecoder"
 
+msgctxt "#13430"
+msgid "Allow hardware acceleration - PRIME"
+msgstr "Allow hardware acceleration - PRIME"
+
 msgctxt "#13431"
 msgid "Pixel shaders"
 msgstr "Pixel shaders"
@@ -5257,6 +5593,22 @@ msgctxt "#13452"
 msgid "Enable this option to use hardware acceleration for VC-1 based codecs. If disabled the CPU will be used instead. Especially VC-1 interlaced fails hard on Intel hardware."
 msgstr "Enable this option to use hardware acceleration for VC-1 based codecs. If disabled the CPU will be used instead. Especially VC-1 interlaced fails hard on Intel hardware."
 
+msgctxt "#13453"
+msgid "Use VP8 VAAPI"
+msgstr "Use VP8 VAAPI"
+
+msgctxt "#13454"
+msgid "Enable this option to use hardware acceleration for the VP8 codec. If disabled the CPU will be used instead."
+msgstr "Enable this option to use hardware acceleration for the VP8 codec. If disabled the CPU will be used instead."
+
+msgctxt "#13455"
+msgid "Use VP9 VAAPI"
+msgstr "Use VP9 VAAPI"
+
+msgctxt "#13456"
+msgid "Enable this option to use hardware acceleration for the VP9 codec. If disabled the CPU will be used instead."
+msgstr "Enable this option to use hardware acceleration for the VP9 codec. If disabled the CPU will be used instead."
+
 msgctxt "#13457"
 msgid "Prefer VAAPI render method"
 msgstr "Prefer VAAPI render method"
@@ -5268,6 +5620,30 @@ msgstr "Allow hardware acceleration - OMXPlayer"
 msgctxt "#13459"
 msgid "Use OMXPlayer for decoding of video files."
 msgstr "Use OMXPlayer for decoding of video files."
+
+msgctxt "#13460"
+msgid "Use HEVC VAAPI"
+msgstr "Use HEVC VAAPI"
+
+msgctxt "#13461"
+msgid "Enable this option to use hardware acceleration for the HEVC codec. If disabled the CPU will be used instead."
+msgstr "Enable this option to use hardware acceleration for the HEVC codec. If disabled the CPU will be used instead."
+
+msgctxt "#13462"
+msgid "PRIME Render Method"
+msgstr "PRIME Render Method"
+
+msgctxt "#13463"
+msgid "This option switches between direct-to-plane and EGL rendering methods."
+msgstr "This option switches between direct-to-plane and EGL rendering methods."
+
+msgctxt "#13464"
+msgid "Direct To Plane"
+msgstr "Direct To Plane"
+
+msgctxt "#13465"
+msgid "EGL"
+msgstr "EGL"
 
 msgctxt "#13505"
 msgid "Resample quality"
@@ -5313,9 +5689,29 @@ msgctxt "#13515"
 msgid "No art"
 msgstr "No art"
 
+msgctxt "#13516"
+msgid "Add art type"
+msgstr "Add art type"
+
 msgctxt "#13517"
 msgid "Threshold for pitch correction"
 msgstr "Threshold for pitch correction"
+
+msgctxt "#13518"
+msgid "When the speed change exceeds this threshold, a pitch-correction filter will be applied. This avoids the \"chipmonk voices\" that normally result from speeding up a video"
+msgstr "When the speed change exceeds this threshold, a pitch-correction filter will be applied. This avoids the \"chipmonk voices\" that normally result from speeding up a video"
+
+msgctxt "#13519"
+msgid "Embedded art"
+msgstr "Embedded art"
+
+msgctxt "#13520"
+msgid "Embedded fanart"
+msgstr "Embedded fanart"
+
+msgctxt "#13521"
+msgid "Choose art type"
+msgstr "Choose art type"
 
 msgctxt "#13550"
 msgid "Delay after change of refresh rate"
@@ -5685,6 +6081,10 @@ msgctxt "#14084"
 msgid "Queue songs on selection"
 msgstr "Queue songs on selection"
 
+msgctxt "#14085"
+msgid "Whitelist"
+msgstr "Whitelist"
+
 msgctxt "#14086"
 msgid "Playback"
 msgstr "Playback"
@@ -5933,6 +6333,10 @@ msgctxt "#14223"
 msgid "Control"
 msgstr "Control"
 
+msgctxt "#14224"
+msgid "Startup"
+msgstr "Startup"
+
 msgctxt "#14225"
 msgid "Network Control"
 msgstr "Network Control"
@@ -5940,6 +6344,10 @@ msgstr "Network Control"
 msgctxt "#14226"
 msgid "Manage Sources"
 msgstr "Manage Sources"
+
+msgctxt "#14227"
+msgid "Startup Settings"
+msgstr "Startup Settings"
 
 msgctxt "#14230"
 msgid "Actions"
@@ -6433,6 +6841,22 @@ msgctxt "#16206"
 msgid "Failed to delete at least one file. Check the log for more information about this message."
 msgstr "Failed to delete at least one file. Check the log for more information about this message."
 
+msgctxt "#16296"
+msgid "Pixelate"
+msgstr "Pixelate"
+
+msgctxt "#16297"
+msgid "Smooth"
+msgstr "Smooth"
+
+msgctxt "#16298"
+msgid "Shows the game's pixels without any modifications."
+msgstr "Shows the game's pixels without any modifications."
+
+msgctxt "#16299"
+msgid "Removes the jagged edges of pixels by evenly fading between adjacent pixels."
+msgstr "Removes the jagged edges of pixels by evenly fading between adjacent pixels."
+
 msgctxt "#16300"
 msgid "Video scaling method"
 msgstr "Video scaling method"
@@ -6861,6 +7285,10 @@ msgctxt "#19067"
 msgid "This event is already being recorded."
 msgstr "This event is already being recorded."
 
+msgctxt "#19068"
+msgid "Recording settings"
+msgstr "Recording settings"
+
 msgctxt "#19069"
 msgid "Guide"
 msgstr "Guide"
@@ -6924,6 +7352,10 @@ msgstr "Lifetime"
 msgctxt "#19084"
 msgid "First day"
 msgstr "First day"
+
+msgctxt "#19085"
+msgid "Unknown channel {0:s}"
+msgstr "Unknown channel {0:s}"
 
 msgctxt "#19086"
 msgid "Instant recording action"
@@ -7016,6 +7448,14 @@ msgstr "at"
 msgctxt "#19108"
 msgid "Fallback framerate"
 msgstr "Fallback framerate"
+
+msgctxt "#19109"
+msgid "Could not save the timer. Check the log for more information about this message."
+msgstr "Could not save the timer. Check the log for more information about this message."
+
+msgctxt "#19110"
+msgid "Could not delete the timer. Check the log for more information about this message."
+msgstr "Could not delete the timer. Check the log for more information about this message."
 
 msgctxt "#19111"
 msgid "PVR backend error. Check the log for more information about this message."
@@ -7161,6 +7601,10 @@ msgctxt "#19146"
 msgid "Groups"
 msgstr "Groups"
 
+msgctxt "#19147"
+msgid "Setting the lifetime of this recording to {0:d} days will immediately expire the recording, which might result in instant deletion of the recording. Proceed anyway?"
+msgstr "Setting the lifetime of this recording to {0:d} days will immediately expire the recording, which might result in instant deletion of the recording. Proceed anyway?"
+
 msgctxt "#19148"
 msgid "Channel"
 msgstr "Channel"
@@ -7225,6 +7669,10 @@ msgctxt "#19163"
 msgid "Recordings"
 msgstr "Recordings"
 
+msgctxt "#19164"
+msgid "Could not start recording. Check the log for more information about this message."
+msgstr "Could not start recording. Check the log for more information about this message."
+
 msgctxt "#19165"
 msgid "Switch"
 msgstr "Switch"
@@ -7244,6 +7692,10 @@ msgstr "Deleted and recoverable recordings"
 msgctxt "#19169"
 msgid "Hide video information box"
 msgstr "Hide video information box"
+
+msgctxt "#19170"
+msgid "Could not stop recording. Check the log for more information about this message."
+msgstr "Could not stop recording. Check the log for more information about this message."
 
 msgctxt "#19171"
 msgid "Switch to full screen"
@@ -7289,6 +7741,10 @@ msgctxt "#19181"
 msgid "Menu / OSD"
 msgstr "Menu / OSD"
 
+msgctxt "#19182"
+msgid "Future days to display"
+msgstr "Future days to display"
+
 msgctxt "#19183"
 msgid "Radio channels"
 msgstr "Radio channels"
@@ -7312,6 +7768,14 @@ msgstr "Clearing all related data."
 msgctxt "#19188"
 msgid "All your guide data will be cleared. Are you sure?"
 msgstr "All your guide data will be cleared. Are you sure?"
+
+msgctxt "#19189"
+msgid "The PVR backend does not allow to record this event."
+msgstr "The PVR backend does not allow to record this event."
+
+msgctxt "#19190"
+msgid "Play programme"
+msgstr "Play program"
 
 msgctxt "#19191"
 msgid "PVR service"
@@ -7461,6 +7925,10 @@ msgctxt "#19228"
 msgid "Timer deleted"
 msgstr "Timer deleted"
 
+msgctxt "#19229"
+msgid "Past days to display"
+msgstr "Past days to display"
+
 msgctxt "#19230"
 msgid "Prevent updates during playback"
 msgstr "Prevent updates during playback"
@@ -7500,6 +7968,14 @@ msgstr "Loading recordings from clients"
 msgctxt "#19239"
 msgid "Starting background threads"
 msgstr "Starting background threads"
+
+msgctxt "#19240"
+msgid "Client priorities"
+msgstr "Client priorities"
+
+msgctxt "#19241"
+msgid "View timer"
+msgstr "View timer"
 
 msgctxt "#19242"
 msgid "Edit timer"
@@ -7585,6 +8061,10 @@ msgctxt "#19262"
 msgid "Parental control. Enter PIN:"
 msgstr "Parental control. Enter PIN:"
 
+msgctxt "#19263"
+msgid "Could not update the timer. Check the log for more information about this message."
+msgstr "Could not update the timer. Check the log for more information about this message."
+
 msgctxt "#19264"
 msgid "Incorrect PIN"
 msgstr "Incorrect PIN"
@@ -7604,6 +8084,10 @@ msgstr "Parental locked:"
 msgctxt "#19268"
 msgid "Hide \"No information available\" labels"
 msgstr "Hide \"No information available\" labels"
+
+msgctxt "#19269"
+msgid "Preselect playing channel in lists"
+msgstr "Preselect playing channel in lists"
 
 msgctxt "#19270"
 msgid "Group Items"
@@ -12813,10 +13297,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Choose which temperature unit is used for displaying temperatures in the user interface."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Show plot information for unwatched media in the video library."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Choose which speed unit is used for displaying speeds in the user interface."
@@ -13444,10 +13924,6 @@ msgstr "When a manual or automatic library update occurs, notify UPnP clients."
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
