--- a/resource.language.fr_ca/resources/strings.po
+++ b/resource.language.fr_ca/resources/strings.po
@@ -5343,7 +5343,7 @@ msgstr "Masque voix – Port 4"
 
 msgctxt "#13386"
 msgid "Use time based seeking"
-msgstr "Utiliser le déplacement basé sur le minutage"
+msgstr "Utiliser le déplacement d’après le minutage"
 
 msgctxt "#13387"
 msgid "Track naming template - right"
@@ -5567,7 +5567,7 @@ msgstr "Utiliser VC-1 VDPAU"
 
 msgctxt "#13446"
 msgid "Enable this option to use hardware acceleration for VC-1 based codecs. If disabled the CPU will be used instead. AMD hardware with VDPAU can't decode VC-1 Simple."
-msgstr "Activer cette option pour utiliser l’accélération matérielle pour les codecs basés sur VC-1. Sinon, l’UCT sera plutôt utilisée. Le matériel AMD avec VDPAU ne peut pas décoder VC-1 Simple."
+msgstr "Activer cette option pour utiliser l’accélération matérielle pour les codecs fondés sur VC-1. Sinon, l’UCT sera plutôt utilisée. Le matériel AMD avec VDPAU ne peut pas décoder VC-1 Simple."
 
 msgctxt "#13447"
 msgid "Use MPEG-2 VAAPI"
@@ -5591,7 +5591,7 @@ msgstr "Utiliser VC-1 VAAPI"
 
 msgctxt "#13452"
 msgid "Enable this option to use hardware acceleration for VC-1 based codecs. If disabled the CPU will be used instead. Especially VC-1 interlaced fails hard on Intel hardware."
-msgstr "Activez cette option pour utiliser l’accélération matérielle pour les codecs basés sur VC-1. Sinon, l’UCT sera plutôt utilisée. L’entrelacement VC-1 échoue particulièrement sur le matériel Intel."
+msgstr "Activez cette option pour utiliser l’accélération matérielle pour les codecs fondés sur VC-1. Sinon, l’UCT sera plutôt utilisée. L’entrelacement VC-1 échoue particulièrement sur le matériel Intel."
 
 msgctxt "#13453"
 msgid "Use VP8 VAAPI"
@@ -5815,7 +5815,7 @@ msgstr "Répertoire des jeux"
 
 msgctxt "#14010"
 msgid "Auto switch to thumbs based on"
-msgstr "Activation auto : basé sur les imagettes"
+msgstr "Basculement automatique vers les imagettes d’après"
 
 msgctxt "#14011"
 msgid "Enable auto switching to thumbs view"
@@ -5827,7 +5827,7 @@ msgstr "– Utiliser les grandes icônes"
 
 msgctxt "#14013"
 msgid "- Switch based on"
-msgstr "– Basculement basé sur"
+msgstr "– Basculement d’après"
 
 msgctxt "#14014"
 msgid "- Percentage"
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Priorité des clients"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Visualiser la minuterie"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Modifier la minuterie"
@@ -8217,9 +8221,9 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Souhaitez-vous enregistrer le programme sélectionné ou basculer vers le programme en cours ?"
 
-msgctxt "#19303"
-msgid "Use simple timeshift OSD"
-msgstr "Utiliser l’affichage à l’écran à décalage temporel simple"
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Visualiser la règle de minuterie"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -10663,7 +10667,7 @@ msgstr "Nombre des pistes de sous-titres"
 
 msgctxt "#21483"
 msgid "View"
-msgstr "Vue"
+msgstr "Visualiser"
 
 msgctxt "#21602"
 msgid "(External)"
@@ -11403,7 +11407,7 @@ msgstr "Mise à jour automatique"
 
 msgctxt "#24064"
 msgid "Add-on enabled"
-msgstr "Addiciel activé"
+msgstr "L’addiciel est activé"
 
 msgctxt "#24065"
 msgid "Add-on updated"
@@ -11591,7 +11595,7 @@ msgstr "Télécharger de sous-titres pour ces langues"
 
 msgctxt "#24112"
 msgid "Set languages to use when searching for subtitles.[CR]Note: Not all subtitle services will use all languages."
-msgstr "Définir les langues à utiliser lors de la recherche de sous-titres.[CR]Note : tous les services de sous-titres n’utiliseront pas toutes les langues."
+msgstr "Définir les langues à utiliser lors de la recherche de sous-titres.[CR]Note : Toutes les langues ne seront pas utilisées pas tous les services de sous-titres."
 
 msgctxt "#24113"
 msgid "Failed to download subtitle"
@@ -11691,7 +11695,7 @@ msgstr "Visualiser"
 
 msgctxt "#24141"
 msgid "Add-on disabled"
-msgstr "Addiciel désactivé"
+msgstr "L’addiciel est désactivé"
 
 msgctxt "#24142"
 msgid "The dependency on {0:s} version {1:s} could not be satisfied."
@@ -12149,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Message de recommandation sur le trafic routier"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS vous informe des messages de recommandation sur le trafic routier"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Augmenter le volume lors de messages de recommandation sur le trafic routier"
@@ -12567,7 +12575,7 @@ msgstr "7.1"
 
 msgctxt "#34111"
 msgid "Select the behaviour when no sound is required for either playback or GUI sounds.[CR][Always] Continuous inaudible signal is output, this keeps the receiving audio device alive for any new sounds, however this might also block sound from other applications.[CR][1-10 Minutes] Same as [Always] except that after the selected period of time audio enters a suspended state.[CR][Off] Audio output enters a suspended state. Note: Sounds can be missed if audio enters suspended state."
-msgstr "Sélectionner le comportement si aucun son n’est requis ni pour la lecture ni pour les sons de l’IUG.[CR][Toujours] - Un signal inaudible continue est émis afin de garder le périphérique audio actif pour tout nouveau son, cependant, cela pourrait aussi bloquer les sons d’autres applications.[CR][1-10 minutes] - Identique à [Toujours] excepté qu’après la fin de la période choisie, l’audio entrera en veille.[CR][Arrêt] - La sortie audio entre en veille. Note : des sons peuvent être manqués si l’audio entre en veille."
+msgstr "Sélectionner le comportement si aucun son n’est requis ni pour la lecture ni pour les sons de l’IUG.[CR][Toujours] - Un signal inaudible continue est émis afin de garder le périphérique audio actif pour tout nouveau son, cependant, cela pourrait aussi bloquer les sons d’autres applications.[CR][1-10 minutes] - Identique à [Toujours] excepté qu’après la fin de la période choisie, l’audio entrera en veille.[CR][Arrêt] - La sortie audio entre en veille. Note : Des sons peuvent être manqués si l’audio entre en veille."
 
 msgctxt "#34112"
 msgid "Send low volume noise"
@@ -12760,6 +12768,14 @@ msgstr "Ignorer l’entrée"
 msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Peser sur tous les boutons analogues maintenant pour les détecter :[CR][CR]{0:s}"
+
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Tout obtenir"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Rien à mapper"
 
 msgctxt "#35047"
 msgid "Driver settings"
@@ -13059,7 +13075,7 @@ msgstr "Durée maximale possible de rebobinage, s’il est pris en charge. De lo
 
 msgctxt "#35207"
 msgid "Emulators"
-msgstr "Emulateurs"
+msgstr "Émulateurs"
 
 msgctxt "#35208"
 msgid "Standalone games"
@@ -13172,6 +13188,10 @@ msgstr "Contrôles"
 msgctxt "#35235"
 msgid "Press {0:s} to open the in-game menu."
 msgstr "Pesez sur {0:s} pour ouvrir le menu intégré au jeu"
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "Dans cette version, on ne peut qu’utiliser des contrôleurs pour jouer aux jeux."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13585,10 +13605,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Choisir quelle unité de température est utilisée pour l’affichage dans l’interface utilisateur."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Afficher l’intrigue pour les médias non visionnés de la vidéothèque."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Choisir quelle unité de vitesse est utilisée pour l’affichage dans l’interface utilisateur."
@@ -13961,10 +13977,6 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Durée de l’enregistrement instantané lorsqu’on pèse sur le bouton d’enregistrement. Cette valeur sera prise en considération si « Action d’enregistrement instantané » est défini à « Enregistrer pendant une durée déterminée »"
 
-msgctxt "#36235"
-msgid "Normal timeshift OSD always shows the complete timeshift buffer along with with the currently playing show, whereas the simple timeshift OSD only shows the currently playing show with no visual feedback how far in the timeshift buffer you can jump from the currently playing position."
-msgstr "L’affichage à l’écran à décalage temporel normal affiche toujours le tampon complet de décalage temporel en parallèle à l’émission en cours de lecture. L’affichage à l’écran à décalage temporel simple n’affiche que l’émission en cours de lecture sans rétroaction visuelle de la position la plus avancée du tampon de décalage temporel vers laquelle vous pouvez sauter à partir de la position de lecture actuelle."
-
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Temps d’enregistrement supplémentaire avant l’heure de début planifiée pour permettre les petits changements de diffusion. N’est pas pris en charge par tous les addiciels ni par toutes les dorsales."
@@ -14285,10 +14297,6 @@ msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Activer le client UPnP. Cela vous permet de diffuser des médias en continu de n’importe quel serveur UPnP avec un point de contrôle et de contrôler la lecture à partir de ce serveur."
 
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Activer le point de contrôle UPnP. Cela vous permet une diffusion multimédia en continu vers n’importe quel client UPnP et d’en contrôler la lecture."
-
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
 msgstr "Cette catégorie contient les paramètres de gestion des services de serveur Web et de contrôle des applications."
@@ -14427,7 +14435,7 @@ msgstr "Sélectionner comment les propriétés de la sortie audio seront défini
 
 msgctxt "#36362"
 msgid "Select the number of channels supported by the audio connection, or the number of speakers if connected by analogue connections. This setting does not apply to passthrough audio. Note: S/PDIF supports 2.0 channels only but can still output multichannel audio using a format supported by passthrough."
-msgstr "Sélectionner le nombre de canaux pris en charge par la connexion audio, ou le nombre de haut-parleurs dans le cas de connexions analogiques. Ce paramètre ne s’applique pas à l’audio en transit. Note : S/PDIF prend seulement en charge les canaux 2.0 mais peut quand même fournir une sortie audio multiplexée en utilisant un format pris en charge par transit."
+msgstr "Sélectionner le nombre de canaux pris en charge par la connexion audio, ou le nombre de haut-parleurs dans le cas de connexions analogiques. Ce paramètre ne s’applique pas à l’audio en transit. Note : S/PDIF prend seulement en charge les canaux 2.0 mais peut quand même fournir une sortie audio multiplexée en utilisant un format pris en charge par transit."
 
 msgctxt "#36363"
 msgid "Boost AC3 streams that have been downmixed to 2 channels."
@@ -14487,7 +14495,7 @@ msgstr "Si cette option est activée, les flèches de votre clavier déplaceront
 
 msgctxt "#36377"
 msgid "Use a mouse or touch screen device to control the interface. Note: Disabling will cause you to lose control over this application when no keyboard or remote is present."
-msgstr "Utiliser une souris ou un périphérique tactile pour contrôler l’interface. Note : le désactiver entraînera votre perte de contrôle de cette application si aucun clavier ou télécommande n’est présent."
+msgstr "Utiliser une souris ou un périphérique tactile pour contrôler l’interface. Note : Désactiver cette option entraînera une perte de contrôle de cette application si aucun clavier ni télécommande ne sont présents."
 
 msgctxt "#36378"
 msgid "Use a joystick to control the interface."
@@ -14717,6 +14725,10 @@ msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "Utiliser le lecteur vidéo pour le décodage des fichiers vidéo avec l’accélération MMAL."
 
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Sélectionnez l’agencement de clavier du SE"
+
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
 msgstr "Définir le nombre de paliers de contrôle du volume."
@@ -14819,7 +14831,7 @@ msgstr "Comme le film"
 
 msgctxt "#36533"
 msgid "Select how audio is downmixed, e.g. from 5.1 to 2.0.[CR][Enabled] Maintains volume level of the original audio source however the dynamic range is compressed.[CR][Disabled] Maintains the dynamic range of the original audio source when downmixed however volume will be lower. Note: Dynamic range is the difference between the quietest and loudest sounds in an audio source. Enable this setting if movie dialogues are barely audible."
-msgstr "Sélectionner comment l’audio est sous-mixé, p. ex. de 5.1 à 2.0.[CR][Activée] Conserve le niveau de volume de la source audio originale, mais l’étendue dynamique est compressée.[CR][Désactivée] Conserve l’étendue dynamique de la source audio originale lors du sous-mixage, mais le volume sera plus bas. Note : l’étendue dynamique est la différence entre les sons les plus faibles et les forts d’une source audio. Activer ce paramètre si les dialogues des films sont à peine audibles."
+msgstr "Sélectionner comment l’audio est sous-mixé, p. ex. de 5.1 à 2.0.[CR][Activée] Conserve le niveau de volume de la source audio originale, mais l’étendue dynamique est compressée.[CR][Désactivée] Conserve l’étendue dynamique de la source audio originale lors du sous-mixage, mais le volume sera plus bas. Note : L’étendue dynamique est la différence entre les sons les plus faibles et les forts d’une source audio. Activer ce paramètre si les dialogues des films sont à peine audibles."
 
 msgctxt "#36534"
 msgid "Specify additional libraries whose verbose messages are to be included in the debug log."
@@ -14891,7 +14903,7 @@ msgstr "Puissance de l’effet stéréoscopique 3D"
 
 msgctxt "#36551"
 msgid "Defines the strength of the stereoscopic 3D effect in the GUI. This is done by controlling the depth of perception within the GUI, so the higher the value, the more elements will pop out of the screen. [Zero] Disables the stereoscopic 3D effect of the GUI.[CR]For a good visual experience, the value should be higher for small screens and lower for large screens. Note: this is not supported by all skins."
-msgstr "Définit la puissance de l’effet stéréoscopique 3D dans l’IUG. Cela est obtenu en contrôlant la profondeur de perception dans l’IUG, donc plus la valeur sera élevée, le plus d’éléments sortiront de l’écran. [Zéro] désactive l’effet stéréoscopique 3D de l’IUG.[CR]Pour une bonne expérience visuelle, la valeur devrait être plus élevée pour les petits écrans et plus basse pour les grands écrans. Note : n’est pas pris en charge par tous les habillages."
+msgstr "Définit la puissance de l’effet stéréoscopique 3D dans l’IUG. Cela est obtenu en contrôlant la profondeur de perception dans l’IUG, donc plus la valeur sera élevée, le plus d’éléments sortiront de l’écran. [Zéro] désactive l’effet stéréoscopique 3D de l’IUG.[CR]Pour une bonne expérience visuelle, la valeur devrait être plus élevée pour les petits écrans et plus basse pour les grands écrans. Note : Cette option n’est pas prise en charge par tous les habillages."
 
 msgctxt "#36552"
 msgid "Defines the number of presentation buffers used by the graphics driver. Select 2 if the driver uses double buffering or 3 for triple buffering."
@@ -15335,7 +15347,7 @@ msgstr "Désirez-vous arrêter la lecture sur le périphérique distant ?"
 
 msgctxt "#37024"
 msgid "Select this if the audio out connection only supports multichannel audio as Dolby Digital 5.1 (AC3), this allows multichannel audio such as AAC 5.1 or FLAC 5.1 to be listened to in 5.1 surround sound. Note: Not recommended on Pi as this requires a lot of CPU."
-msgstr "Sélectionner cette option si la connexion de sortie audio ne prend en charge l’audio multiplexé qu’en « Dolby Digital 5.1 (AC3) ». Cela permet d’écouter de l’audio multiplexé tel que AAC 5.1 ou Flac 5.1 en son ambiophonique 5.1. Note : n’est pas recommandé sur le Pi car cette option charge considérablement l’UCT."
+msgstr "Sélectionner cette option si la connexion de sortie audio ne prend en charge l’audio multiplexé qu’en « Dolby Digital 5.1 (AC3) ». Cela permet d’écouter de l’audio multiplexé tel que AAC 5.1 ou Flac 5.1 en son ambiophonique 5.1. Note : Cette option n’est pas recommandée sur le Pi, car elle demande beaucoup à l’UCT."
 
 msgctxt "#37025"
 msgid "Configure audio encoder settings such as quality and compression level"
@@ -15363,7 +15375,7 @@ msgstr "Illimité"
 
 msgctxt "#37031"
 msgid "Specifies how Blu-rays should be opened / played back. Note: Some disc menus are not fully supported and may cause problems."
-msgstr "Spécifie comment les disques Blu-ray devraient être ouverts / lus. Note : certains menus de disque ne sont pas pris en charge et pourraient causer des problèmes."
+msgstr "Spécifie comment les disques Blu-ray devraient être ouverts ou lus. Note : Certains menus de disque ne sont pas pris en charge et pourraient causer des problèmes."
 
 msgctxt "#37032"
 msgid "Accessibility"
@@ -15483,7 +15495,7 @@ msgstr "Décoder le flux stéréo des fichiers 3D"
 
 msgctxt "#38028"
 msgid "If enabled, videos created in Multiview Video Coding (MVC) format can also be watched in stereoscopic 3D. MVC format is typically found on 3D Blu-rays.[CR]Note: Processing of this data may reduce playback performance, so only enable if you require stereoscopic 3D support."
-msgstr "Si cette option est activée, les vidéos créées au format « Multiview Video Coding » (MVC) peuvent aussi être visionnées en 3D stéréoscopique. L’on trouve habituellement le format MVC sur les Blu-ray 3D.[CR]Note : le traitement de ces données pourrait réduire les performances de lecture et ne doit donc être activé que si la prise en charge de la 3D stéréoscopique est exigée."
+msgstr "Si cette option est activée, les vidéos créées au format « Multiview Video Coding » (MVC) peuvent aussi être visionnées en 3D stéréoscopique. L’on trouve habituellement le format MVC sur les Blu-ray 3D.[CR]Note : Le traitement de ces données pourrait réduire les performances de lecture et ne doit donc être activé que si la prise en charge de la 3D stéréoscopique est exigée."
 
 msgctxt "#38029"
 msgid "Enable Full HD HDMI modes for stereoscopic 3D"
