--- a/resource.language.fr_fr/resources/strings.po
+++ b/resource.language.fr_fr/resources/strings.po
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Priorités du client"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Voir la programmation"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Éditer la programmation"
@@ -8217,9 +8221,9 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Faut-il enregistrer le programme sélectionné ou bien basculer vers le programme actuel ?"
 
-msgctxt "#19303"
-msgid "Use simple timeshift OSD"
-msgstr "Utiliser une incrustation à l'écran simple du décalage"
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Voir la règle de programmation"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -12149,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Message de conseil de trafic"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS diffuse des informations de trafic sous forme de messages de conseil."
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Augmenter le volume lors d'un message de conseil de trafic"
@@ -12761,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Appuyer sur tous les boutons analogiques maintenant pour les détecter :[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Tout choisir"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Rien à mapper"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Paramètres des pilotes…"
@@ -13172,6 +13188,10 @@ msgstr "Commandes"
 msgctxt "#35235"
 msgid "Press {0:s} to open the in-game menu."
 msgstr "Appuyer sur {0:s} pour ouvrir le menu interne du jeu."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "Dans cette version, seuls des contrôleurs peuvent être utilisés pour jouer."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13585,10 +13605,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Sélection de l'unité de mesure pour l'affichage des températures sur l'interface utilisateur."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Affiche l'intrigue de tout média non regardé de la vidéothèque."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Sélection de l'unité de mesure pour l'affichage des vitesses sur l'interface utilisateur."
@@ -13961,10 +13977,6 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Durée de l'enregistrement immédiat quand le bouton d'enregistrement est pressé. Cette valeur sera prise en compte si l'action « Enregistrement immédiat » est définie à « Enregistrer pendant une période de temps fixe »."
 
-msgctxt "#36235"
-msgid "Normal timeshift OSD always shows the complete timeshift buffer along with with the currently playing show, whereas the simple timeshift OSD only shows the currently playing show with no visual feedback how far in the timeshift buffer you can jump from the currently playing position."
-msgstr "L'incrustation à l'écran normale du décalage affiche toujours le tampon de décalage total lors de la lecture, tandis que l'incrustation à l'écran simple du décalage affiche seulement la lecture sans retour visuel sur le temps qu'il est possible de sauter dans le tampon de décalage à partir de la position courante lue."
-
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Temps d'enregistrement supplémentaire avant l'heure de début planifiée pour tolérer des changements mineurs de diffusion. Toutes les extensions et tous les serveurs ne sont pas reconnus."
@@ -14284,10 +14296,6 @@ msgstr "Notifie les clients UPnP lorsqu'une mise à jour manuelle ou automatique
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Active le client UPnP. Cela permet de contrôler la diffusion de médias à partir de n'importe quel serveur UPnP avec un point de contrôle, et de contrôler la lecture à partir de ce serveur."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Active le point de contrôle UPnP. Permet la diffusion de médias vers tout client UPnP et le contrôle de sa lecture."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14716,6 +14724,10 @@ msgstr "Autorise l'accélération matérielle - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "Utilise le lecteur VideoPlayer pour décoder les fichiers vidéos avec l'accélération MMAL."
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Sélection de la disposition du clavier de l'OS."
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
