--- a/resource.language.hr_hr/resources/strings.po
+++ b/resource.language.hr_hr/resources/strings.po
@@ -1113,6 +1113,10 @@ msgctxt "#306"
 msgid "Non-interleaved"
 msgstr "Non-interleaved"
 
+msgctxt "#307"
+msgid "Media default"
+msgstr "Medijski zadano"
+
 msgctxt "#308"
 msgid "Original language"
 msgstr "Izvorni jezik"
@@ -1869,6 +1873,10 @@ msgctxt "#505"
 msgid "Loading media information from files..."
 msgstr "Učitavanje informacija medija iz datoteka..."
 
+msgctxt "#506"
+msgid "Checking media files..."
+msgstr "Provjera medijskih datoteka..."
+
 msgctxt "#507"
 msgid "Sort by: Usage"
 msgstr "Razvrstaj po: Upotrebi"
@@ -2505,6 +2513,22 @@ msgctxt "#683"
 msgid "Verbose logging of [B]audio/video timing information[/B]"
 msgstr "Opširnije zapisivanje za [B]Video/Zvučne vremenske informacije[/B]"
 
+msgctxt "#684"
+msgid "Verbose logging of [B]Windowing[/B] component"
+msgstr "Opširnije zapisivanje za [B]Zaslonske[/B] komponente"
+
+msgctxt "#685"
+msgid "Verbose logging of [B]PVR[/B] component"
+msgstr "Opširnije zapisivanje za [B]PVR[/B] komponente"
+
+msgctxt "#686"
+msgid "Verbose logging of [B]EPG[/B] component"
+msgstr "Opširnije zapisivanje za [B]EPG[/B] komponente"
+
+msgctxt "#687"
+msgid "From metadata"
+msgstr "Iz metapodataka"
+
 msgctxt "#700"
 msgid "Cleaning up library"
 msgstr "Čišćenje popisa izvođenja"
@@ -2656,6 +2680,14 @@ msgstr "Žuto"
 msgctxt "#744"
 msgid "Files"
 msgstr "Datoteke"
+
+msgctxt "#745"
+msgid "Background colour"
+msgstr "Pozadinska boja"
+
+msgctxt "#746"
+msgid "Background opacity"
+msgstr "Prozirnost pozadine"
 
 msgctxt "#747"
 msgid "Error loading image"
@@ -3753,6 +3785,10 @@ msgctxt "#10005"
 msgid "Not available"
 msgstr "Nije dostupno"
 
+msgctxt "#10006"
+msgid "N/A"
+msgstr "N/A"
+
 msgctxt "#10007"
 msgid "System information"
 msgstr "Informacije sustava"
@@ -3977,6 +4013,10 @@ msgctxt "#10126"
 msgid "File browser"
 msgstr "Preglednik datoteka"
 
+msgctxt "#10127"
+msgid "channels"
+msgstr "programi"
+
 msgctxt "#10128"
 msgid "Network setup"
 msgstr "Postavke mreže"
@@ -4056,6 +4096,10 @@ msgstr "Pretraga podnaslova"
 msgctxt "#10157"
 msgid "OSD CMS settings"
 msgstr "OSD CMS postavke"
+
+msgctxt "#10159"
+msgid "Subtitle OSD settings"
+msgstr "Postavke prikaza podnaslova"
 
 msgctxt "#10210"
 msgid "Looking for subtitles..."
@@ -5549,6 +5593,22 @@ msgctxt "#13452"
 msgid "Enable this option to use hardware acceleration for VC-1 based codecs. If disabled the CPU will be used instead. Especially VC-1 interlaced fails hard on Intel hardware."
 msgstr "Omogući ovu mogućnost za korištenje hardverskog ubrzanja za VC-1 temeljene kôdeke. Ako je onemogućeno koristit će se više CPU resursa. Osobito VC-1 raspletanje ne radi na Intelovom hardveru."
 
+msgctxt "#13453"
+msgid "Use VP8 VAAPI"
+msgstr "Koristi VP8 VAAPI"
+
+msgctxt "#13454"
+msgid "Enable this option to use hardware acceleration for the VP8 codec. If disabled the CPU will be used instead."
+msgstr "Omogući ovu mogućnost za korištenje hardverskog ubrzanja za VP8 kôdeke. Ako je onemogućeno, koristit će se više CPU resursa."
+
+msgctxt "#13455"
+msgid "Use VP9 VAAPI"
+msgstr "Koristi VP9 VAAPI"
+
+msgctxt "#13456"
+msgid "Enable this option to use hardware acceleration for the VP9 codec. If disabled the CPU will be used instead."
+msgstr "Omogući ovu mogućnost za korištenje hardverskog ubrzanja za VP9 kôdeke. Ako je onemogućeno, koristit će se više CPU resursa."
+
 msgctxt "#13457"
 msgid "Prefer VAAPI render method"
 msgstr "Preferiraj VAAPI način prikazivanja"
@@ -5560,6 +5620,30 @@ msgstr "Dopusti hardversko ubrzanje - OMXPlayer"
 msgctxt "#13459"
 msgid "Use OMXPlayer for decoding of video files."
 msgstr "Koristi OMXPlayer za dekôdiranje video snimaka."
+
+msgctxt "#13460"
+msgid "Use HEVC VAAPI"
+msgstr "Koristi HEVC VAAPI"
+
+msgctxt "#13461"
+msgid "Enable this option to use hardware acceleration for the HEVC codec. If disabled the CPU will be used instead."
+msgstr "Omogući ovu mogućnost za korištenje hardverskog ubrzanja za HEVC kôdeke. Ako je onemogućeno, koristit će se više CPU resursa."
+
+msgctxt "#13462"
+msgid "PRIME Render Method"
+msgstr "PRIME način prikazivanja"
+
+msgctxt "#13463"
+msgid "This option switches between direct-to-plane and EGL rendering methods."
+msgstr "Ova opcija prebacuje između direct-to-plane i EGL prikazivanja."
+
+msgctxt "#13464"
+msgid "Direct To Plane"
+msgstr "Direct To Plane"
+
+msgctxt "#13465"
+msgid "EGL"
+msgstr "EGL"
 
 msgctxt "#13505"
 msgid "Resample quality"
@@ -5605,6 +5689,10 @@ msgctxt "#13515"
 msgid "No art"
 msgstr "Nema slike omota"
 
+msgctxt "#13516"
+msgid "Add art type"
+msgstr "Dodaj vrstu omota"
+
 msgctxt "#13517"
 msgid "Threshold for pitch correction"
 msgstr "Prag ispravka najviše točke"
@@ -5620,6 +5708,10 @@ msgstr "Ugrađena slika omota"
 msgctxt "#13520"
 msgid "Embedded fanart"
 msgstr "Ugrađen poster obožavatelja"
+
+msgctxt "#13521"
+msgid "Choose art type"
+msgstr "Odaberi vrstu omota"
 
 msgctxt "#13550"
 msgid "Delay after change of refresh rate"
@@ -5988,6 +6080,10 @@ msgstr "Koristi cjelozaslonski prozor"
 msgctxt "#14084"
 msgid "Queue songs on selection"
 msgstr "Stavi u red čekanja pjesmu po odabiru "
+
+msgctxt "#14085"
+msgid "Whitelist"
+msgstr "Popis dopuštenih"
 
 msgctxt "#14086"
 msgid "Playback"
@@ -7877,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Prioriteti klijenta"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Vidi brojač"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Uredi zakazano snimanje"
@@ -8116,6 +8216,14 @@ msgstr "Okomiti programi, bez odabira grupa"
 msgctxt "#19301"
 msgid "Horizontal channels, no group selector"
 msgstr "Vodoravni programi, bez odabira grupa"
+
+msgctxt "#19302"
+msgid "Do you want to record the selected programme or to switch to the current programme?"
+msgstr "Želite li snimiti odabranu emisiju ili se želite prebaciti na trenutnu emisiju?"
+
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Pregledaj pravilo zakazanog snimanja"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -9249,6 +9357,18 @@ msgctxt "#20223"
 msgid "Artist information folder"
 msgstr "Mapa informacija izvođača"
 
+msgctxt "#20224"
+msgid "Prefer online album art"
+msgstr "Preferiraj internetski omot"
+
+msgctxt "#20225"
+msgid "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
+msgstr "Ako nije dostupna lokalna slika omota, biti će upotrijebljena internetska. Ako obje nisu dostupne, biti će upotrijebljena slika omota ugrađena u datoteke."
+
+msgctxt "#20228"
+msgid "Use artist sortname when sorting by artist"
+msgstr "Koristi sortiranje prema prezimenu kada se sortira prema izvođaču."
+
 msgctxt "#20240"
 msgid "Android music"
 msgstr "Android glazba"
@@ -10044,6 +10164,10 @@ msgstr "Koristi video oznake"
 msgctxt "#21344"
 msgid "If mp4 or mkv files have tags, use this for library metadata"
 msgstr "Ako mp4 ili mkv datoteke imaju oznake, koristi ih za metapodatke videoteke"
+
+msgctxt "#21345"
+msgid "Uncategorized"
+msgstr "Bez kategorije"
 
 msgctxt "#21358"
 msgid "Enable UPnP support"
@@ -12029,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Prometne radio poruke"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS vas informira o stanju u prometu"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Pojačaj glasnoću zvuka pri prometnim radio porukama"
@@ -12641,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Pritisnite sve analogne tipke kako bi bile otkrivene:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Dohvati sve"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Nema ničeg za mapiranje"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Postavke upravljačkog programa"
@@ -12808,6 +12944,10 @@ msgstr "Pokazivači"
 msgctxt "#35105"
 msgid "Light gun"
 msgstr "Svjetlosni pištolj"
+
+msgctxt "#35106"
+msgid "Shoot offscreen"
+msgstr "Pucaj van ekrana"
 
 msgctxt "#35107"
 msgid "Console switches"
@@ -12997,6 +13137,10 @@ msgctxt "#35222"
 msgid "Exit"
 msgstr "Izlaz"
 
+msgctxt "#35223"
+msgid "Missing: {0:s}"
+msgstr "Nedostaje: {0:s}"
+
 msgctxt "#35224"
 msgid "Pause / Resume"
 msgstr "Pauziraj / Nastavi"
@@ -13009,6 +13153,46 @@ msgctxt "#35226"
 msgid "Advanced settings"
 msgstr "Napredne postavke"
 
+msgctxt "#35227"
+msgid "Rotation"
+msgstr "Okretanje"
+
+msgctxt "#35228"
+msgid "0°"
+msgstr "0°"
+
+msgctxt "#35229"
+msgid "90°"
+msgstr "90°"
+
+msgctxt "#35230"
+msgid "180°"
+msgstr "180°"
+
+msgctxt "#35231"
+msgid "270°"
+msgstr "270°"
+
+msgctxt "#35232"
+msgid "Fullscreen"
+msgstr "Cijeli zaslon"
+
+msgctxt "#35233"
+msgid "Stretch mode"
+msgstr "Način širenja slike"
+
+msgctxt "#35234"
+msgid "Controls"
+msgstr "Kontrole"
+
+msgctxt "#35235"
+msgid "Press {0:s} to open the in-game menu."
+msgstr "Stisni {0:s} za otvaranje menija igre."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "U ovom izdanju, za igranje igara mogu se koristiti samo kontroleri."
+
 msgctxt "#35250"
 msgid "Add games..."
 msgstr "Dodaj igru..."
@@ -13020,6 +13204,14 @@ msgstr "Dodaj izvor igre"
 msgctxt "#35252"
 msgid "Edit game source"
 msgstr "Uredi izvor igre"
+
+msgctxt "#35253"
+msgid "Enable autosave if supported"
+msgstr "Omogući automatsko spremanje ako je podržano."
+
+msgctxt "#35254"
+msgid "Save the game automatically during game play, if supported. Resume playing where you left off."
+msgstr "Spremi igru automatski tijekom igranja, ako je podržano. Nastavite igrati od mjesta gdje ste stali."
 
 msgctxt "#35256"
 msgid "Failed to install add-on."
@@ -13233,6 +13425,18 @@ msgctxt "#36046"
 msgid "Force AVR to wake up when Kodi is activated"
 msgstr "Prisili AV prijemnik da se probudi kada se Kodi aktivira"
 
+msgctxt "#36047"
+msgid "Remote button press delay before repeating (ms)"
+msgstr "Odgoda ponavljanja pritiska dugmeta na daljinskom upravljaču (ms)"
+
+msgctxt "#36048"
+msgid "Remote button press repeat rate (ms)"
+msgstr "Brzina ponavljanja pritiska dugmeta na daljinskom upravljaču (ms)"
+
+msgctxt "#36049"
+msgid "Remote button press release time (ms)"
+msgstr "Vrijeme otpuštanja pritiska dugmeta daljinskog upravljača (ms)"
+
 msgctxt "#36099"
 msgid "Dithering"
 msgstr "Treperenje"
@@ -13401,10 +13605,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Odaberite koja će se jedinica temperatue koristiti za prikaz tempetatura u korisničkom sučelju."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Prikaži kratak sadržaj za neodgledane medije u videoteci."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Odaberite koja će se jedinica brzine koristiti za prikaz brzine u korisničkom sučelju."
@@ -13444,6 +13644,10 @@ msgstr "Uvezi XML datoteku u bazu podataka videteke."
 msgctxt "#36151"
 msgid "This category contains the settings for how video playback is handled."
 msgstr "Kategorija sadrži sve postavke rukovanja video reprodukcijom."
+
+msgctxt "#36152"
+msgid "Enable automatic playback of the next file in the list for selected playlist types."
+msgstr "Omogući automatsku reprodukciju slijedeće datoteke na popisu za odabrane vrste popisa reprodukcije."
 
 msgctxt "#36153"
 msgid "Adjust the method used to process and display video."
@@ -13520,6 +13724,10 @@ msgstr "Razvuci video na odabrani postotak u svrhu smanjenja crnih rubova."
 msgctxt "#36171"
 msgid "Select the zoom level that 4:3 videos are shown on widescreen displays."
 msgstr "Odaberi razinu zumiranja kojom će  4:3 video snimke biti prikazane na širokim zaslonima."
+
+msgctxt "#36172"
+msgid "Enable PRIME hardware decoding of video files, used if ffmpeg PRIME hwaccel is available."
+msgstr "Omogući PRIME hardversko dekôdiranje video datoteka, koristi se ako je omogućena ffmpeg PRIME hwaccel opcija."
 
 msgctxt "#36173"
 msgid "Choose which short date format is used for displaying the date in the user interface."
@@ -13741,9 +13949,17 @@ msgctxt "#36227"
 msgid "Switch to full screen display when starting playback of channels and recordings."
 msgstr "Prebaci u cjelozaslonski prikaz pri pokretanju reprodukcije ili snimanja programa."
 
+msgctxt "#36228"
+msgid "Set the colour to be used for the subtitle background."
+msgstr "Postavite boju pozadine podnaslova."
+
 msgctxt "#36229"
 msgid "Display signal quality information in the codec information window (if supported by the add-on and backend)."
 msgstr "Prikaži informacije kvalitete signala u prozoru informacija kôdeka (ako je podržano dodatkom pozadinskog softvera)."
+
+msgctxt "#36230"
+msgid "Set the the subtitle background opacity."
+msgstr "Postavite razinu prozirnosti pozadine podnaslova."
 
 msgctxt "#36231"
 msgid "When flipping through channels using channel up/down buttons, channel switches must be confirmed using the OK button."
@@ -13989,6 +14205,10 @@ msgctxt "#36293"
 msgid "Select the folder where artist information (nfo files and images) should be saved in."
 msgstr "Odaberite mapu za spremanje informacija izvođača (nfo datoteke i slike)."
 
+msgctxt "#36294"
+msgid "When sorting music items by artist use sortname e.g. Parton, Dolly rather than name."
+msgstr "Kada sortirate glazbu prema izvođaču, koristite sortiranje prema prezimenu, npr. Bačič, Lidija umjesto prema imenu."
+
 msgctxt "#36302"
 msgid "No info available yet."
 msgstr "Informacije još nisu dostupne."
@@ -14076,10 +14296,6 @@ msgstr "Kada se ručne ili automatske nadopune zbirke pojave, obavijesti UPNP kl
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Omogući UPnP klijent. To vam omogućuje stremanje medija s bilo kojeg UPnP poslužitelja s točkom upravljanja i upravljanjem reprodukcijom s toga poslužitelja."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Omogući UPnP točku upravljanja. To će vam omogućiti stremanje medija na bilo koji UPnP klijent i upravljanje reprodukcijom."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14196,6 +14412,10 @@ msgstr "Ako je omogućeno, cjelozaslonski prikaz biti će primjenjen u prozoru u
 msgctxt "#36355"
 msgid "In a multi-screen configuration, the screens not displaying this application are blacked out."
 msgstr "U konfiguracijama s više zaslona, zasloni gdje ova aplikacija nije prikazana su zatamnjeni."
+
+msgctxt "#36356"
+msgid "Whitelisted modes are allowed to be switched to when changing resolution and refresh rate"
+msgstr "Popis modova koji su dopušteni prilikom izmjene razlučivosti i osvježavanja zaslona."
 
 msgctxt "#36357"
 msgid "Calibrate the user interface by adjusting the overscan. Use this tool if the image being displayed is too large or small for your display."
@@ -14505,6 +14725,10 @@ msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "Koristi video reproduktor za dekôdiranje video datoteka s MMAL ubrzanjem."
 
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Odaberi raspored tipkovnice operacijskog sustava."
+
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
 msgstr "Postavite broj koraka upravljanja glasnoćom zvuka."
@@ -14684,6 +14908,22 @@ msgstr "Određuje jačinu stereoskopskih 3D efekata u GUI sučelju. To se izvodi
 msgctxt "#36552"
 msgid "Defines the number of presentation buffers used by the graphics driver. Select 2 if the driver uses double buffering or 3 for triple buffering."
 msgstr "Određuje broj međuspremnika prikaza koji koristi grafički upravljački program. Odaberite 2 ako upravljački program koristi dvostruko međuspremanje ili 3 ako koristi trostruko međuspremanje."
+
+msgctxt "#36553"
+msgid "Tone mapping"
+msgstr "Mapiranje tona slike"
+
+msgctxt "#36554"
+msgid "off"
+msgstr "isključeno"
+
+msgctxt "#36555"
+msgid "Reinhard"
+msgstr "Reinhard"
+
+msgctxt "#36556"
+msgid "Tone mapping parameter"
+msgstr "Parametri mapiranja tona slike"
 
 msgctxt "#36560"
 msgid "Colour management"
@@ -15673,6 +15913,10 @@ msgctxt "#39030"
 msgid "Source"
 msgstr "Izvor"
 
+msgctxt "#39031"
+msgid "Sources"
+msgstr "Izvori"
+
 msgctxt "#39100"
 msgid "Perform on startup"
 msgstr "Pokreni pri pokretanju"
@@ -15712,3 +15956,19 @@ msgstr "opis zvučnog zapisa"
 msgctxt "#39109"
 msgid "Select Program"
 msgstr "Odaberi program"
+
+msgctxt "#39110"
+msgid "Select Resolution"
+msgstr "Odaberi razlučivost"
+
+msgctxt "#39111"
+msgid "original"
+msgstr "original"
+
+msgctxt "#39112"
+msgid "Downmix: Center Mix Level"
+msgstr "Spajanje: glasnoća centralnog kanala"
+
+msgctxt "#39113"
+msgid "Center Mix Level in dB relative to metadata or default (-3 dB)"
+msgstr "Razina centralnog kanala u dB u odnosu na metapodatke ili zadanu postavku (-3 dB)"
