--- a/resource.language.hu_hu/resources/strings.po
+++ b/resource.language.hu_hu/resources/strings.po
@@ -1113,6 +1113,10 @@ msgctxt "#306"
 msgid "Non-interleaved"
 msgstr "Nem interleave típusú"
 
+msgctxt "#307"
+msgid "Media default"
+msgstr "A média alapértelmezése"
+
 msgctxt "#308"
 msgid "Original language"
 msgstr "Eredeti nyelv"
@@ -1869,6 +1873,10 @@ msgctxt "#505"
 msgid "Loading media information from files..."
 msgstr "Médiainformációk betöltése fájlokból…"
 
+msgctxt "#506"
+msgid "Checking media files..."
+msgstr "Médiafájlok ellenőrzése ..."
+
 msgctxt "#507"
 msgid "Sort by: Usage"
 msgstr "Használat alapján"
@@ -2505,6 +2513,22 @@ msgctxt "#683"
 msgid "Verbose logging of [B]audio/video timing information[/B]"
 msgstr "Az [B]audio/video időzítésinformáció [/B] részletes naplózása"
 
+msgctxt "#684"
+msgid "Verbose logging of [B]Windowing[/B] component"
+msgstr "A [B]Windowing[/B] komponens széleskörű naplózása"
+
+msgctxt "#685"
+msgid "Verbose logging of [B]PVR[/B] component"
+msgstr "A [B]PVR[/B] komponens részletes verziója"
+
+msgctxt "#686"
+msgid "Verbose logging of [B]EPG[/B] component"
+msgstr "Az [B]EPG[/B] komponens részletes verziója"
+
+msgctxt "#687"
+msgid "From metadata"
+msgstr "A metaadatokból"
+
 msgctxt "#700"
 msgid "Cleaning up library"
 msgstr "Médiatár tisztítása"
@@ -2656,6 +2680,14 @@ msgstr "Sárga"
 msgctxt "#744"
 msgid "Files"
 msgstr "Fájlok"
+
+msgctxt "#745"
+msgid "Background colour"
+msgstr "Háttérszín"
+
+msgctxt "#746"
+msgid "Background opacity"
+msgstr "Háttér átlátszósága"
 
 msgctxt "#747"
 msgid "Error loading image"
@@ -3753,6 +3785,10 @@ msgctxt "#10005"
 msgid "Not available"
 msgstr "Nem elérhető"
 
+msgctxt "#10006"
+msgid "N/A"
+msgstr "Nem elérhető"
+
 msgctxt "#10007"
 msgid "System information"
 msgstr "Rendszerinfó"
@@ -3977,6 +4013,10 @@ msgctxt "#10126"
 msgid "File browser"
 msgstr "Fájlkezelő"
 
+msgctxt "#10127"
+msgid "channels"
+msgstr "csatornák"
+
 msgctxt "#10128"
 msgid "Network setup"
 msgstr "Hálózat beállítása"
@@ -4056,6 +4096,10 @@ msgstr "Felirat keresés"
 msgctxt "#10157"
 msgid "OSD CMS settings"
 msgstr "OSD CMS beállítások"
+
+msgctxt "#10159"
+msgid "Subtitle OSD settings"
+msgstr "Felirat OSD beállításai"
 
 msgctxt "#10210"
 msgid "Looking for subtitles..."
@@ -5585,6 +5629,22 @@ msgctxt "#13461"
 msgid "Enable this option to use hardware acceleration for the HEVC codec. If disabled the CPU will be used instead."
 msgstr "Az HEVC kodek hardveres gyorsításának bekapcsolása. Tiltás esetén a CPU dekódol."
 
+msgctxt "#13462"
+msgid "PRIME Render Method"
+msgstr "PRIME renderelési módszer"
+
+msgctxt "#13463"
+msgid "This option switches between direct-to-plane and EGL rendering methods."
+msgstr "Ez az opció a közvetlen-sík (direct-to-plane) és az EGL-renderelési módok között vált."
+
+msgctxt "#13464"
+msgid "Direct To Plane"
+msgstr "Közvetlenül síkra"
+
+msgctxt "#13465"
+msgid "EGL"
+msgstr "EGL"
+
 msgctxt "#13505"
 msgid "Resample quality"
 msgstr "Újramintavételezés minősége"
@@ -6020,6 +6080,10 @@ msgstr "Teljes képernyős nézet használata"
 msgctxt "#14084"
 msgid "Queue songs on selection"
 msgstr "Zeneszám kiválasztására hozzáadás a lejátszási listához"
+
+msgctxt "#14085"
+msgid "Whitelist"
+msgstr "Engedélyezési lista"
 
 msgctxt "#14086"
 msgid "Playback"
@@ -7909,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Ügyfél fontosság"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Idõzítõ megtekintése"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Időzítés szerkesztése"
@@ -8148,6 +8216,14 @@ msgstr "Függőleges csatornák, nincs csoportválasztó"
 msgctxt "#19301"
 msgid "Horizontal channels, no group selector"
 msgstr "Vízszintes csatornák, nincs csoportválasztó"
+
+msgctxt "#19302"
+msgid "Do you want to record the selected programme or to switch to the current programme?"
+msgstr "Szeretné felvenni a kiválasztott programot vagy átállna az aktuális programra?"
+
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Időzítő szabály megtekintése"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -9281,6 +9357,18 @@ msgctxt "#20223"
 msgid "Artist information folder"
 msgstr "Előadó-információ mappa"
 
+msgctxt "#20224"
+msgid "Prefer online album art"
+msgstr "Online albumborító előnyben részesítése"
+
+msgctxt "#20225"
+msgid "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
+msgstr "Ha nincs helyi albumborító, akkor az online borító kerül felhasználásra. Ha egyik sem áll rendelkezésre, akkor a zeneszámokba ágyazott képeket fogja használni"
+
+msgctxt "#20228"
+msgid "Use artist sortname when sorting by artist"
+msgstr "Használja az előadó vezetéknevét az előadó szerint történő rendezés során"
+
 msgctxt "#20240"
 msgid "Android music"
 msgstr "Android zenék"
@@ -10076,6 +10164,10 @@ msgstr "Videó címke használata"
 msgctxt "#21344"
 msgid "If mp4 or mkv files have tags, use this for library metadata"
 msgstr "Ha az mp4 vagy mkv fájloknak van címkéje, akkor használja ezt a könyvtárat a metaadatokhoz"
+
+msgctxt "#21345"
+msgid "Uncategorized"
+msgstr "Kategorizálatlan"
 
 msgctxt "#21358"
 msgid "Enable UPnP support"
@@ -12061,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Forgalmi felhívás"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "Az RDS tájékoztat a forgalmi tanácsadási üzenetekről"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Hangerő növelése a forgalmi felhívásoknál"
@@ -12673,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Nyomja meg az összes analóg gombot az észlelésükhöz:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Az összeset"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Nincs leképezni való"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Meghajtó beállítások"
@@ -13033,6 +13137,10 @@ msgctxt "#35222"
 msgid "Exit"
 msgstr "Kilépés"
 
+msgctxt "#35223"
+msgid "Missing: {0:s}"
+msgstr "Hiányzik: {0:s}"
+
 msgctxt "#35224"
 msgid "Pause / Resume"
 msgstr "Szünet / Folytatás"
@@ -13045,6 +13153,46 @@ msgctxt "#35226"
 msgid "Advanced settings"
 msgstr "Speciális beállítások"
 
+msgctxt "#35227"
+msgid "Rotation"
+msgstr "Elforgatás"
+
+msgctxt "#35228"
+msgid "0°"
+msgstr "0°"
+
+msgctxt "#35229"
+msgid "90°"
+msgstr "90°"
+
+msgctxt "#35230"
+msgid "180°"
+msgstr "180°"
+
+msgctxt "#35231"
+msgid "270°"
+msgstr "270°"
+
+msgctxt "#35232"
+msgid "Fullscreen"
+msgstr "Teljes képernyő"
+
+msgctxt "#35233"
+msgid "Stretch mode"
+msgstr "Nyújtott mód"
+
+msgctxt "#35234"
+msgid "Controls"
+msgstr "Ellenőrzések"
+
+msgctxt "#35235"
+msgid "Press {0:s} to open the in-game menu."
+msgstr "Nyomja meg a {0:s} gombot a játékon belüli menü megnyitásához."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "Ebben a verzióban csak a vezérlők használhatják a játékokat."
+
 msgctxt "#35250"
 msgid "Add games..."
 msgstr "Játékok hozzáadása…"
@@ -13056,6 +13204,14 @@ msgstr "Játékforrás hozzáadása"
 msgctxt "#35252"
 msgid "Edit game source"
 msgstr "Játékforrás szerkesztése"
+
+msgctxt "#35253"
+msgid "Enable autosave if supported"
+msgstr "Engedélyezze az automatikus mentést, ha támogatott"
+
+msgctxt "#35254"
+msgid "Save the game automatically during game play, if supported. Resume playing where you left off."
+msgstr "Mentse a játékot automatikusan játék közben, ha támogatott. Folytassa a játékot, ahol abbahagyta."
 
 msgctxt "#35256"
 msgid "Failed to install add-on."
@@ -13449,10 +13605,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Válassza ki a hőmérsékleti egységet a hőmérséklet megjelenítéséhez a felhasználói felületen."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Jelenítse meg a még nem megnézett videók tartalmát a videótárban."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Válassza ki a sebesség egységet a sebességek megjelenítéséhez a felhasználói felületen."
@@ -13492,6 +13644,10 @@ msgstr "XML fájl importálása a videótár adatbázisba."
 msgctxt "#36151"
 msgid "This category contains the settings for how video playback is handled."
 msgstr "Ez a kategória a videolejátszással kapcsolatos beállításokat tartalmazza."
+
+msgctxt "#36152"
+msgid "Enable automatic playback of the next file in the list for selected playlist types."
+msgstr "Engedélyezheti a kiválasztott fájl lejátszási listájának listájában szereplő következő fájl automatikus lejátszását."
 
 msgctxt "#36153"
 msgid "Adjust the method used to process and display video."
@@ -13793,9 +13949,17 @@ msgctxt "#36227"
 msgid "Switch to full screen display when starting playback of channels and recordings."
 msgstr "Teljes képernyőre váltás a csatornák és felvételek visszajátszásának elindításakor."
 
+msgctxt "#36228"
+msgid "Set the colour to be used for the subtitle background."
+msgstr "Állítsa be a felirat hátteréhez használt színt."
+
 msgctxt "#36229"
 msgid "Display signal quality information in the codec information window (if supported by the add-on and backend)."
 msgstr "Jelminőség kijelzése a kodekinformácós ablakban (ha a kiegészítő és a háttérkiszolgáló is támogatja)"
+
+msgctxt "#36230"
+msgid "Set the the subtitle background opacity."
+msgstr "Állítsa be a felirat hátterének átlátszóságát."
 
 msgctxt "#36231"
 msgid "When flipping through channels using channel up/down buttons, channel switches must be confirmed using the OK button."
@@ -14041,6 +14205,10 @@ msgctxt "#36293"
 msgid "Select the folder where artist information (nfo files and images) should be saved in."
 msgstr "Válassza ki a mappát ahová az előadó-információk (nfo fájlok és képek) mentve legyenek."
 
+msgctxt "#36294"
+msgid "When sorting music items by artist use sortname e.g. Parton, Dolly rather than name."
+msgstr "Amikor a zeneszámokat előadó szerint rendezi, használja a vezetékneveket, pl. Parton, a Dolly helyett név."
+
 msgctxt "#36302"
 msgid "No info available yet."
 msgstr "Nincs még információ"
@@ -14128,10 +14296,6 @@ msgstr "UPnP ügyfelek értesítése, ha kézi vagy automatikus médiatár friss
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "UPnP ügyfél engedélyezése. Ez lehetővé teszi bármelyik UPnP kiszolgálóról a lejátszást, és a lejátszás vezérlését arról kiszolgálóról."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "UPnP vezérlőpont engedélyezése. Ez lehetővé teszi a médiák lejátszását és vezérlését minden UPnP ügyfélnek."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14248,6 +14412,10 @@ msgstr "Ha be van kapcsolva, akkor a teljes képernyős mód egy ablakban lesz e
 msgctxt "#36355"
 msgid "In a multi-screen configuration, the screens not displaying this application are blacked out."
 msgstr "Többképernyős konfiguráció esetén, a képernyők amelyeken nem ez az alkalmazás jelenik meg, azok elsötétülnek."
+
+msgctxt "#36356"
+msgid "Whitelisted modes are allowed to be switched to when changing resolution and refresh rate"
+msgstr "A megengedett módok engedélyezettek a felbontás és a frissítési sebesség megváltoztatásakor"
 
 msgctxt "#36357"
 msgid "Calibrate the user interface by adjusting the overscan. Use this tool if the image being displayed is too large or small for your display."
@@ -14557,6 +14725,10 @@ msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "A VideoPlayer használata a videófájlok lejátszásához MMAL gyorsítással."
 
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Válassza az operációs rendszer billentyűzetkiosztását."
+
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
 msgstr "Hangerőszabályozás lépéseinek száma"
@@ -14736,6 +14908,22 @@ msgstr "Meghatározza a GUI sztreoszkópikus 3D hatásának erősségét. Ez a m
 msgctxt "#36552"
 msgid "Defines the number of presentation buffers used by the graphics driver. Select 2 if the driver uses double buffering or 3 for triple buffering."
 msgstr "Meghatározza a grafikus eszközmeghajtó által használt megjelenítési pufferek számát. Válasszon 2-t a dupla puffereléshez, vagy 3-at a tripla puffereléshez."
+
+msgctxt "#36553"
+msgid "Tone mapping"
+msgstr "Hangok leképezése"
+
+msgctxt "#36554"
+msgid "off"
+msgstr "ki"
+
+msgctxt "#36555"
+msgid "Reinhard"
+msgstr "Reinhard"
+
+msgctxt "#36556"
+msgid "Tone mapping parameter"
+msgstr "Hangok leképezési paraméterei"
 
 msgctxt "#36560"
 msgid "Colour management"
@@ -15725,6 +15913,10 @@ msgctxt "#39030"
 msgid "Source"
 msgstr "Forrás"
 
+msgctxt "#39031"
+msgid "Sources"
+msgstr "Források"
+
 msgctxt "#39100"
 msgid "Perform on startup"
 msgstr "Végrehajtás induláskor"
@@ -15768,3 +15960,15 @@ msgstr "Műsor kiválasztása"
 msgctxt "#39110"
 msgid "Select Resolution"
 msgstr "Felbontás kiválasztása"
+
+msgctxt "#39111"
+msgid "original"
+msgstr "eredeti"
+
+msgctxt "#39112"
+msgid "Downmix: Center Mix Level"
+msgstr "Lekeverés: Center keverési szint"
+
+msgctxt "#39113"
+msgid "Center Mix Level in dB relative to metadata or default (-3 dB)"
+msgstr "Center keverési szint dB-ben metaadatokhoz vagy alapértelmezetthez képest (-3 dB)"
