--- a/resource.language.nl_nl/resources/strings.po
+++ b/resource.language.nl_nl/resources/strings.po
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "cliëntprioriteiten"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Bekijk timer"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Pas geplande timer aan"
@@ -8216,6 +8220,10 @@ msgstr "Horizontale kanalen, geen groepskeuze"
 msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Wil je het gekozen programma opnemen of naar het huidige programma schakelen?"
+
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Bekijk timer-regel"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -9356,6 +9364,10 @@ msgstr "Prefereer online-albumafbeeldingen"
 msgctxt "#20225"
 msgid "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
 msgstr "Waar geen albumcovers aanwezig zijn, zullen online-afbeeldingen gebruikt worden. Waar geen van beide beschikbaar zijn, zullen in de muziekbestanden ingesloten afbeeldingen gebruikt worden."
+
+msgctxt "#20228"
+msgid "Use artist sortname when sorting by artist"
+msgstr "Gebruik artiest-sorteernaam bij sortering op artiest"
 
 msgctxt "#20240"
 msgid "Android music"
@@ -11515,7 +11527,7 @@ msgstr "Add-on uitgeschakeld vanwege gemarkeerd als niet-werkend in de repositor
 
 msgctxt "#24095"
 msgid "Local package cache"
-msgstr "Lokale pakketjes buffer"
+msgstr "Lokale pakkettenbuffer"
 
 msgctxt "#24096"
 msgid "Add-on has been marked broken in repository."
@@ -12141,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Berichten verkeer advies"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS informeert je met verkeersberichten"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Verhoog volume bij verkeersinformatie"
@@ -12753,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Druk nu op alle analoge knoppen om ze te herkennen:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Haal alles op"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Niets in te delen"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Driverinstellingen"
@@ -13113,6 +13137,10 @@ msgctxt "#35222"
 msgid "Exit"
 msgstr "Afsluiten"
 
+msgctxt "#35223"
+msgid "Missing: {0:s}"
+msgstr "Gemist: {0:s}"
+
 msgctxt "#35224"
 msgid "Pause / Resume"
 msgstr "Pause / Hervat"
@@ -13156,6 +13184,14 @@ msgstr "Stretchmodus"
 msgctxt "#35234"
 msgid "Controls"
 msgstr "Bediening"
+
+msgctxt "#35235"
+msgid "Press {0:s} to open the in-game menu."
+msgstr "Klik op {0:s} om het in-game menu te openen."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "In deze release kunnen controllers alleen gebruikt worden om spelletjes te spelen."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13568,10 +13604,6 @@ msgstr "Deze categorie bevat de instellingen voor hoe de videobibliotheek wordt 
 msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Kies welke temperatuureenheid wordt gebruikt voor het tonen van temperaturen in de gebruikersomgeving."
-
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Toon plot informatie voor niet-bekeken media in de videobibliotheek"
 
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
@@ -14173,6 +14205,10 @@ msgctxt "#36293"
 msgid "Select the folder where artist information (nfo files and images) should be saved in."
 msgstr "Selecteer de map waarin artiestinformatie (nfo-bestanden en afbeeldingen) moeten worden opgeslagen."
 
+msgctxt "#36294"
+msgid "When sorting music items by artist use sortname e.g. Parton, Dolly rather than name."
+msgstr "Bij het sorteren van muziekitems, gebruik de sorteernaam. Bijvoorbeeld Parton, Dolly in plaats van de artiestnaam."
+
 msgctxt "#36302"
 msgid "No info available yet."
 msgstr "Nog geen informatie beschikbaar."
@@ -14260,10 +14296,6 @@ msgstr "Wanneer een handmatige of automatische bibliotheek update gebeurt, waars
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Activeer de UPnP cliënt. Dit stelt je in staat om media te streamen vanuit elke UPnP server met een controlepunt, en het afspelen te controleren vanop die server."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Activeer het UPnP-controlepunt. Hiermee kun je media streamen naar elke UPnP-cliënt, en het afspelen van media ernaar bepalen."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14692,6 +14724,10 @@ msgstr "Toestaan van hardwareversnelling - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "VideoPlayer gebruiken voor het decoderen van videobestanden met MMAL-versnelling."
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Kies de OS-toetsenbordindeling."
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
