--- a/resource.language.pl_pl/resources/strings.po
+++ b/resource.language.pl_pl/resources/strings.po
@@ -13109,6 +13109,10 @@ msgctxt "#35222"
 msgid "Exit"
 msgstr "Zamknij"
 
+msgctxt "#35223"
+msgid "Missing: {0:s}"
+msgstr "Brak: {0:s}"
+
 msgctxt "#35224"
 msgid "Pause / Resume"
 msgstr "Wstrzymaj / Wznów"
@@ -13560,10 +13564,6 @@ msgstr "Kategoria zawierająca ustawienia związane z obsługą biblioteki wideo
 msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Określa jednostkę temperatury używaną do wyświetania temperatury w interfejsie użytkownika."
-
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Umożliwia wyświetlanie opisu dla nieobejrzanych pozycji w bibliotece wideo."
 
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
@@ -14236,10 +14236,6 @@ msgstr "Umożliwia powiadamianie klientów UPnP o automatycznej lub manualnej ak
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Aktywuje klienta UPnP. Umożliwia to odtwarzanie mediów z dowolnego serwera UPnP z punktem sterowania oraz sterowanie odtwarzaniem mediów z tego serwera."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Aktywuje punkt sterowania UPnP. Umożliwia to transmisję mediów do dowolnego klienta UPnP i sterowanie ich odtwarzaniem."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
