--- a/resource.language.zh_cn/resources/strings.po
+++ b/resource.language.zh_cn/resources/strings.po
@@ -2525,6 +2525,10 @@ msgctxt "#686"
 msgid "Verbose logging of [B]EPG[/B] component"
 msgstr "[B]电子节目单[/B]组件详细日志"
 
+msgctxt "#687"
+msgid "From metadata"
+msgstr "来自元数据"
+
 msgctxt "#700"
 msgid "Cleaning up library"
 msgstr "清理资料库"
@@ -7969,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "客户端优先级"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "浏览定时器"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "编辑定时器"
@@ -8212,6 +8220,10 @@ msgstr "横排频道，无分组选择"
 msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "录制已选择节目还是切换到当前节目？"
+
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "浏览定时器规则"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -9352,6 +9364,10 @@ msgstr "优先选择在线专辑艺术图片"
 msgctxt "#20225"
 msgid "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
 msgstr "无本地专辑封面时，使用在线艺术图片。如本地和在线图片均不可用，则使用音乐文件内嵌封面图片"
+
+msgctxt "#20228"
+msgid "Use artist sortname when sorting by artist"
+msgstr "按歌手排序时使用歌手排序名"
 
 msgctxt "#20240"
 msgid "Android music"
@@ -12137,13 +12153,17 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "交通咨询信息"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS 通知你交通信息"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "提高交通咨询音量"
 
 msgctxt "#29985"
 msgid "If traffic advisory is send from RDS, volume is increased"
-msgstr "RDS 发送交通咨询时，音量增大"
+msgstr "RDS 发送交通信息时，音量增大"
 
 msgctxt "#29987"
 msgid "Remixers"
@@ -12749,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "现在按下所有模拟按钮检测它们：[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "全部"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "无可映射项"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "驱动设置"
@@ -13109,6 +13137,10 @@ msgctxt "#35222"
 msgid "Exit"
 msgstr "退出"
 
+msgctxt "#35223"
+msgid "Missing: {0:s}"
+msgstr "缺失：{0:s}"
+
 msgctxt "#35224"
 msgid "Pause / Resume"
 msgstr "暂停/继续播放"
@@ -13152,6 +13184,14 @@ msgstr "拉伸模式"
 msgctxt "#35234"
 msgid "Controls"
 msgstr "控制"
+
+msgctxt "#35235"
+msgid "Press {0:s} to open the in-game menu."
+msgstr "按 {0:s} 打开游戏内菜单。"
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "此版本仅可使用控制器玩游戏。"
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13564,10 +13604,6 @@ msgstr "此功能区包含视频资料库处理相关设置。"
 msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "选择用户界面中显示温度使用的单位。"
-
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "显示视频资料库中未观看媒体的剧情信息。"
 
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
@@ -14169,6 +14205,10 @@ msgctxt "#36293"
 msgid "Select the folder where artist information (nfo files and images) should be saved in."
 msgstr "选择保存歌手信息（nfo 文件和图片）的文件夹。"
 
+msgctxt "#36294"
+msgid "When sorting music items by artist use sortname e.g. Parton, Dolly rather than name."
+msgstr "当以歌手排序音乐项时，使用排序名如 Parton、Dolly 而非全名。"
+
 msgctxt "#36302"
 msgid "No info available yet."
 msgstr "无可用信息。"
@@ -14256,10 +14296,6 @@ msgstr "当人工或自动更新资料库时，通知 UPnP 客户端。"
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "启用 UPnP 客户端。这将允许你通过一个控制点从任何 UPnP 服务器获取流媒体并控制播放。"
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "启用 UPnP 控制点。这将允许你发送流媒体到任何 UPnP 客户端并控制它的播放。"
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14688,6 +14724,10 @@ msgstr "允许硬件加速 - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "使用 VideoPlayer 用 MMAL 加速解码视频文件。"
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "选择操作系统键盘布局。"
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
@@ -15924,3 +15964,11 @@ msgstr "选择分辨率"
 msgctxt "#39111"
 msgid "original"
 msgstr "原始"
+
+msgctxt "#39112"
+msgid "Downmix: Center Mix Level"
+msgstr "混缩：中置混合级别"
+
+msgctxt "#39113"
+msgid "Center Mix Level in dB relative to metadata or default (-3 dB)"
+msgstr "基于元数据或默认值（-3 dB）按 dB 中置混合级别"
