--- a/resource.language.cs_cz/resources/strings.po
+++ b/resource.language.cs_cz/resources/strings.po
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Priority klienta"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Zobrazit časovač"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Upravit časovač"
@@ -8217,9 +8221,9 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Chcete nahrát vybraný pořad nebo přepnout na aktuální pořad?"
 
-msgctxt "#19303"
-msgid "Use simple timeshift OSD"
-msgstr "Používat jednoduché OSD časového posunu"
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Zobrazit pravidlo časovače"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -12149,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Zpráva dopravního hlášení"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS vás informuje o zprávách dopravního hlášení"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Zvýšit hlasitost při dopravním hlášení"
@@ -12761,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Stiskněte nyní všechna analogová tlačítka pro jejich rozpoznání:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Získat vše"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Není co mapovat"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Nastavení ovladače"
@@ -13172,6 +13188,10 @@ msgstr "Ovládání"
 msgctxt "#35235"
 msgid "Press {0:s} to open the in-game menu."
 msgstr "Stiskněte {0:s} pro otevření nabídky ve hře."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "V tomto vydání mohou být pro hraní her použity pouze ovladače."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13585,10 +13605,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Zvolte, která jednotka teploty bude použita pro zobrazení teplot v uživatelském rozhraní."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Zobrazit informace o ději pro nezhlédnutá média v knihovně videí."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Zvolte, která jednotka rychlosti bude použita pro zobrazení rychlostí v uživatelském rozhraní."
@@ -13961,10 +13977,6 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Doba trvání okamžitého nahrávání při stisknutí tlačítka nahrávání. Tato hodnota bude také brána v potaz, pokud je „Akce okamžitého nahrávání“ nastavena na „Nahrávat pevný časový úsek“"
 
-msgctxt "#36235"
-msgid "Normal timeshift OSD always shows the complete timeshift buffer along with with the currently playing show, whereas the simple timeshift OSD only shows the currently playing show with no visual feedback how far in the timeshift buffer you can jump from the currently playing position."
-msgstr "Normální OSD časového posunu vždy zobrazuje kompletní vyrovnávací paměť časového posunu spolu s aktuálně přehrávaným pořadem, zatímco jednoduché OSD časového posunu zobrazuje pouze aktuálně přehrávaný pořad bez vizuální zpětné vazby, jak daleko ve vyrovnávací paměti časového posunu můžete přejít z aktuálně přehrávané pozice."
-
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Dodatečný čas nahrávání před naplánovaným časem spuštění kvůli malým změnám ve vysílání. Není podporováno všemi doplňky a backendy."
@@ -14284,10 +14296,6 @@ msgstr "Když nastane ruční nebo automatická aktualizace knihovny, upozornit 
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Povolit klienta UPnP. Toto vám umožňuje streamovat média z jakéhokoliv serveru UPnP s řídícím bodem a ovládáním přehrávání z tohoto serveru."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Povolit řídící bod UPnP. Toto vám umožňuje streamovat média do jakéhokoliv klienta UPnP a ovládat jeho přehrávání."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14716,6 +14724,10 @@ msgstr "Povolit hardwarovou akceleraci - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "Použít VideoPlayer pro dekódování souborů videa s akcelerací MMAL."
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Vyberte rozložení klávesnice OS."
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
