--- a/resource.language.es_es/resources/strings.po
+++ b/resource.language.es_es/resources/strings.po
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Prioridades de cliente"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Ver programación"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Editar programación"
@@ -8217,9 +8221,9 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "¿Desea grabar el programa seleccionado o cambiar al programa actual?"
 
-msgctxt "#19303"
-msgid "Use simple timeshift OSD"
-msgstr "Usar OSD simple en línea de tiempo"
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Ver regla de programación"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -12149,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Mensaje de advertencia de tráfico"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS informará sobre avisos de tráfico"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Incrementar volumen para las advertencias de tráfico"
@@ -12761,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Pulse todos los botones analógicos ahora para detectarlos:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Instalar todos"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "No hay nada a mapear"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Ajustes de controlador"
@@ -13172,6 +13188,10 @@ msgstr "Controles"
 msgctxt "#35235"
 msgid "Press {0:s} to open the in-game menu."
 msgstr "Pulse {0:s} para abrir el menú del juego."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "En esta versión, solo se pueden usar mandos para jugar."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13585,10 +13605,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Qué unidad de temperatura se usará para mostrar temperaturas en el interfaz de usuario."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Muestra el argumento para el contenido no visto de la colección de vídeos."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Qué unidad de velocidad se usará para mostrar velocidades en el interfaz de usuario."
@@ -13961,10 +13977,6 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Duración de la grabación inmediata cuando presiona el botón Grabar. Este valor se utilizará si la \"acción de grabación inmediata\" está configurada como \"Grabar un periodo fijo de tiempo\""
 
-msgctxt "#36235"
-msgid "Normal timeshift OSD always shows the complete timeshift buffer along with with the currently playing show, whereas the simple timeshift OSD only shows the currently playing show with no visual feedback how far in the timeshift buffer you can jump from the currently playing position."
-msgstr "El OSD Normal de la línea de tiempo siempre muestra la línea completa de duración del programa reproducido, mientras que el OSD simple solo muestra el programa actual sin indicar visualmente cuanto tiempo hay disponible para saltar en la línea de tiempo."
-
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Tiempo adicional grabado antes del tiempo especificado para permitir pequeños cambios en la emisión. No soportado por todos los add-ons y servidores."
@@ -14284,10 +14296,6 @@ msgstr "Cuando se actualice la colección, notificará a los clientes UPnP."
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Activa el cliente UPnP. Esto le permite transmitir contenido desde cualquier servidor UPnP con un punto de control y controlar la reproducción desde ese servidor."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Activa el punto de control UPnP. Permite enviar contenido a un cliente UPnP y controlar la reproducción."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14716,6 +14724,10 @@ msgstr "Permitir aceleración por hardware - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "Usa VideoPlayer para decodificar archivos de vídeo con aceleración MMAL."
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Escoger distribución del teclado del SO."
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
