--- a/resource.language.fi_fi/resources/strings.po
+++ b/resource.language.fi_fi/resources/strings.po
@@ -7969,6 +7969,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Asiakasohjelmien tärkeysjärjestys"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Näytä ajastus"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Muokkaa ajastusta"
@@ -8213,9 +8217,9 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Haluatko tallentaa valitun ohjelman vai haluatko vaihtaa kanavalle?"
 
-msgctxt "#19303"
-msgid "Use simple timeshift OSD"
-msgstr "Yksinkertainen ajansiirron kuvaruutuvalikko"
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Näytä ajastussääntö"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -10659,7 +10663,7 @@ msgstr "Tekstitysraitojen määrä"
 
 msgctxt "#21483"
 msgid "View"
-msgstr "Näkymä"
+msgstr "Näytä"
 
 msgctxt "#21602"
 msgid "(External)"
@@ -12145,6 +12149,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Näytä liikennetiedotteet"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "Näyttää radiolähetyksen kautta tulevat liikennetiedotteet"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Nosta äänenvoimakkuutta liikennetiedotteen saapuessa"
@@ -12757,6 +12765,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Paina nyt kaikkia analogisia painikkeita niiden havaitsemiseksi:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Asenna kaikki"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Ei määritettävää"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Ajuriasetukset"
@@ -13168,6 +13184,10 @@ msgstr "Ohjain"
 msgctxt "#35235"
 msgid "Press {0:s} to open the in-game menu."
 msgstr "Paina {0:s} avataksesi pelivalikon."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "Tässä versiossa pelejä voi pelata vain peliohjaimilla."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13581,10 +13601,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Valitse sovelluksessa käytettävä lämpötilayksikkö."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Näyttää katsomattomien elokuvien ja jaksojen juonikuvaukset."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Valitse sovelluksessa käytettävä nopeusyksikkö."
@@ -13957,10 +13973,6 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Tallennuspainikkeesta asetettujen pikatallennusten kesto. Tätä arvoa käytetään, jos \"Pikatallennuksen toiminto\"-asetuksena käytetään \"Tallenna tietty aika\"."
 
-msgctxt "#36235"
-msgid "Normal timeshift OSD always shows the complete timeshift buffer along with with the currently playing show, whereas the simple timeshift OSD only shows the currently playing show with no visual feedback how far in the timeshift buffer you can jump from the currently playing position."
-msgstr "Normaalissa kuvaruutuvalikossa näytetään aina koko ajansiirtopuskuri sekä nykyinen ohjelma. Yksinkertaisessa kuvaruutuvalikossa näytetään vain nykyinen ohjelma ilman tietoa siitä kuinka pitkälle eteenpäin puskurissa voi siirtyä."
-
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Aloittaa ohjelman tallentamisen etuajassa valitun minuuttimäärän verran. Toiminnosta on hyötyä, jos ohjelma alkaa ilmoitettua aiemmin. Kaikki lisäosat eivät tue tätä toimintoa."
@@ -14280,10 +14292,6 @@ msgstr "Ilmoita manuaalisista tai automaattisista kirjaston päivityksistä UPnP
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Kytkee UPnP-asiakkaan päälle. UPnP-asiakkaalle voi lähettää mediatiedostoja verkkoon kytketyiltä UPnP-palvelimilta ja hallita mediatoistoa UPnP-ohjauspisteen kautta."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Kytkee UPnP-ohjauspisteen päälle. UPnP-ohjauspiste voi lähettää mediatiedostoja UPnP-asiakkaille ja hallita asiakkaiden mediatoistoa."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14712,6 +14720,10 @@ msgstr "Salli laitteistokiihdytys - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "Käytä VideoPlayeriä videotiedostojen purkamiseen MMAL-kiihdytyksellä."
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Valitse käyttöjärjestelmän näppäimistöasettelu."
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
