--- a/resource.language.lt_lt/resources/strings.po
+++ b/resource.language.lt_lt/resources/strings.po
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Kliento prioritetai"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Peržiūrėti laikmatį"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Redaguoti laikmatį"
@@ -8217,9 +8221,9 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Norite įrašyti pasirinktą programą ar perjungti į dabartinę programą?"
 
-msgctxt "#19303"
-msgid "Use simple timeshift OSD"
-msgstr "Naudoti paprastą laiko poslinkio OSD"
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Peržiūrėti laikmačio taisyklę"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -12149,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Pranešti eismo patarimus"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS informuoja jus apie eismo patarimų žinutes"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Padidinti garsumą per eismo patarimus"
@@ -12761,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Paspauskite visus analoginius mygtukus dabar, kad būtų galima juos aptikti:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Gauti visus"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Nėra ko susieti"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Tvarkyklės nustatymai"
@@ -13172,6 +13188,10 @@ msgstr "Valdymas"
 msgctxt "#35235"
 msgid "Press {0:s} to open the in-game menu."
 msgstr "Paspauskite {0:s} norėdami atidaryti vidinį žaidimo meniu."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "Šiame leidime žaidimams gali būti naudojami tik valdikliai."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13585,10 +13605,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Pasirinkite, kurį temperatūros matavimo vienetą naudoti temperatūros atvaizdavimui vartotojo sąsajoje."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Rodyti siužeto informaciją neperžiūrėtiems media įrašams video bibliotekoje."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Pasirinkite, kurį greičio matavimo vienetą naudoti greičio atvaizdavimui vartotojo sąsajoje."
@@ -13961,10 +13977,6 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Momentinio įrašymo trukmė paspaudus įrašymo mygtuką. Į šią reikšmę bus atsižvelgta, jei \"Momentinio įrašymo veiksmas\" nustatytas į \"Įrašyti fiksuotą laiko periodą\""
 
-msgctxt "#36235"
-msgid "Normal timeshift OSD always shows the complete timeshift buffer along with with the currently playing show, whereas the simple timeshift OSD only shows the currently playing show with no visual feedback how far in the timeshift buffer you can jump from the currently playing position."
-msgstr "Normalus laiko poslinkio OSD visada atvaizduoja pilną laiko poslinkio buferį kartu su šiuo metu rodoma laida, tuo metu kai paprastas laiko poslinkio OSD atvaizduoja tik šiuo metu rodomą laidą be jokios vizualinės informacijos kaip toli laiko poslinkio buferyje galite peršokti iš dabartinės atkūrimo pozicijos."
-
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Papildomas įrašymo laikas prieš suplanuotą pradžios laiką tam, kad leisti nežymius transliacijos pakeitimus. Palaiko ne visi priedai ir posistemės."
@@ -14284,10 +14296,6 @@ msgstr "Informuoti UPnP klientus, kad įvyko rankinis arba automatinis bibliotek
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Įjungti UPnP klientą. Tai leis jums priimti media srautą iš bet kurio UPnP serverio su kontrolės tašku ir atkūrimo valdymu iš to serverio."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Įjungti UPnP valdymo tašką. Tai leis perduoti media srautą į bet kurį UPnP klientą ir valdyti jo atkūrimą."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14716,6 +14724,10 @@ msgstr "Leisti aparatinės įrangos spartinimą - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "Naudoti VideoPlayer video failų dekodavimui su MMAL spartinimu."
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Pasirinkti OS klaviatūros išdėstymą."
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
