--- a/resource.language.pt_br/resources/strings.po
+++ b/resource.language.pt_br/resources/strings.po
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "Cliente Prioridades"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "Visualizar agendamentos"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "Editar agendamento"
@@ -8217,9 +8221,9 @@ msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "Deseja gravar o programa selecionado ou trocar para o programa atual?"
 
-msgctxt "#19303"
-msgid "Use simple timeshift OSD"
-msgstr "Use o OSD timeshift simplificado"
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "Visualizar as regras de agendamento"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -12149,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "Mensagens de alerta de tráfego"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "O RDS informa sobre mensagens de aviso de tráfego"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "Aumentar volume nas mensagens de tráfego"
@@ -12761,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "Pressione todos os botões analógicos agora para detectá-los: [CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "Obter todos"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "Nada por mapear"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "Ajustes do driver."
@@ -13172,6 +13188,10 @@ msgstr "Controles"
 msgctxt "#35235"
 msgid "Press {0:s} to open the in-game menu."
 msgstr "Pressione {0:s} para abrir o menu in-game."
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "Nesta versão, somente controladores podem ser usados para jogar."
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13585,10 +13605,6 @@ msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "Escolha qual a unidade de temperatura será usada para apresentar temperaturas na interface do usuário."
 
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "Mostra informações de enredo para mídias não assistidas na biblioteca de vídeos."
-
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
 msgstr "Escolha qual a unidade de velocidade será usada para apresentar velocidades na interface do usuário."
@@ -13961,10 +13977,6 @@ msgctxt "#36234"
 msgid "Duration of instant recordings when pressing the record button. This value will be taken into account if \"Instant recording action\" is set to \"Record for a fixed period of time\""
 msgstr "Duração da gravação imediata quando pressionar o botão de gravar. Este valor irá levar em conta o que estiver configurado se \"ação de gravação imediata\" estiver setado para \"Gravar por um período fixo de tempo\""
 
-msgctxt "#36235"
-msgid "Normal timeshift OSD always shows the complete timeshift buffer along with with the currently playing show, whereas the simple timeshift OSD only shows the currently playing show with no visual feedback how far in the timeshift buffer you can jump from the currently playing position."
-msgstr "O OSD do timeshift normal sempre mostra o buffer de timeshift completo juntamente com o que está sendo reproduzido, enquanto o OSD de timeshift simplificado mostra apenas o que está sendo reproduzido sem feedback visual e e até onde você pode saltar da posição atual da reprodução."
-
 msgctxt "#36237"
 msgid "Additional time to record before the scheduled start time to allow for minor broadcasting changes. Not supported by all add-ons and backends."
 msgstr "Tempo adicional para gravar antes da hora de início agendada para permitir mudanças de radiodifusão menores. Não é suportado por todos os add-ons e backends."
@@ -14284,10 +14296,6 @@ msgstr "Quando ocorrer uma atualização da biblioteca manual ou automática, no
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "Ativar o cliente UPnP. Isto permitir-lhe-à transmitir mídia de qualquer servidor UPnP com um ponto de controle e controlar a reprodução a partir desse servidor."
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "Ativar o ponto de controle UPnP. Isso permite que você faça stream de mídia para qualquer cliente UPnP e controle a reprodução."
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14716,6 +14724,10 @@ msgstr "Permitir aceleração por hardware - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "Usar o VideoPlayer para decodificação de arquivos de vídeos com aceleração MMAL."
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "Selecione o layout do teclado OS"
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
