--- a/resource.language.zh_tw/resources/strings.po
+++ b/resource.language.zh_tw/resources/strings.po
@@ -7973,6 +7973,10 @@ msgctxt "#19240"
 msgid "Client priorities"
 msgstr "客戶端優先權"
 
+msgctxt "#19241"
+msgid "View timer"
+msgstr "檢視定時器"
+
 msgctxt "#19242"
 msgid "Edit timer"
 msgstr "編輯定時器"
@@ -8216,6 +8220,10 @@ msgstr "水平式頻道列表，無群組"
 msgctxt "#19302"
 msgid "Do you want to record the selected programme or to switch to the current programme?"
 msgstr "你要錄製選定的節目或者切換到目前播放的節目?"
+
+msgctxt "#19304"
+msgid "View timer rule"
+msgstr "檢視定時器規則"
 
 msgctxt "#19499"
 msgid "Other / Unknown"
@@ -9356,6 +9364,10 @@ msgstr "優先使用線上專輯封面圖"
 msgctxt "#20225"
 msgid "Where no local album cover exists, online art will be used. Where neither is available, cover images embedded in music files will be used"
 msgstr "若本機沒有該專輯封面，則會使用網路上的美術圖。若兩者皆無法取得，則會使用嵌在音樂檔案中的封面圖。"
+
+msgctxt "#20228"
+msgid "Use artist sortname when sorting by artist"
+msgstr "依藝人名排序時使用藝人的姓氏來排序"
 
 msgctxt "#20240"
 msgid "Android music"
@@ -12141,6 +12153,10 @@ msgctxt "#29982"
 msgid "Message traffic advisory"
 msgstr "路況訊息"
 
+msgctxt "#29983"
+msgid "RDS informs you about traffic advisory messages"
+msgstr "RDS可提供交通方面的指引訊息"
+
 msgctxt "#29984"
 msgid "Increase volume on traffic advisory"
 msgstr "加大路況訊息的音量"
@@ -12753,6 +12769,14 @@ msgctxt "#35020"
 msgid "Press all analog buttons now to detect them:[CR][CR]{0:s}"
 msgstr "請即按下所有類比按鈕來進行偵測:[CR][CR]{0:s}"
 
+msgctxt "#35021"
+msgid "Get all"
+msgstr "取得全部"
+
+msgctxt "#35022"
+msgid "Nothing to map"
+msgstr "無可對應的項目"
+
 msgctxt "#35047"
 msgid "Driver settings"
 msgstr "驅動程式設定"
@@ -13113,6 +13137,10 @@ msgctxt "#35222"
 msgid "Exit"
 msgstr "離開"
 
+msgctxt "#35223"
+msgid "Missing: {0:s}"
+msgstr "遺失： {0:s}"
+
 msgctxt "#35224"
 msgid "Pause / Resume"
 msgstr "暫停 / 繼續"
@@ -13156,6 +13184,14 @@ msgstr "拉伸模式"
 msgctxt "#35234"
 msgid "Controls"
 msgstr "控制項"
+
+msgctxt "#35235"
+msgid "Press {0:s} to open the in-game menu."
+msgstr "按下 {0:s} 來開啟遊戲中的選單"
+
+msgctxt "#35236"
+msgid "In this release, only controllers can be used to play games."
+msgstr "在此版本中，僅能使用控制器來操作遊戲"
 
 msgctxt "#35250"
 msgid "Add games..."
@@ -13568,10 +13604,6 @@ msgstr "此分類包含如何處理影片資料庫的設定。"
 msgctxt "#36140"
 msgid "Choose which temperature unit is used for displaying temperatures in the user interface."
 msgstr "選擇用來在使用者介面中顯示氣溫時使用的溫度單位。"
-
-msgctxt "#36141"
-msgid "Show plot information for unwatched media in the video library."
-msgstr "在影片資料庫中未看過的影片也顯示劇情簡介。"
 
 msgctxt "#36142"
 msgid "Choose which speed unit is used for displaying speeds in the user interface."
@@ -14173,6 +14205,10 @@ msgctxt "#36293"
 msgid "Select the folder where artist information (nfo files and images) should be saved in."
 msgstr "選擇要存放演出者資料(nfo檔及圖片)的資料夾。"
 
+msgctxt "#36294"
+msgid "When sorting music items by artist use sortname e.g. Parton, Dolly rather than name."
+msgstr "以藝人名為音樂檔案排序時，使用姓氏，而不是名，如：周, 杰倫。"
+
 msgctxt "#36302"
 msgid "No info available yet."
 msgstr "無可用資訊。"
@@ -14260,10 +14296,6 @@ msgstr "當資料庫手動或自動更新時，通知 UPnP 用戶端。"
 msgctxt "#36325"
 msgid "Enable the UPnP client. This allows you to stream media from any UPnP server with a control point and control playback from that server."
 msgstr "啟用 UPnP 用戶端。這將允許您從任何 UPnP 伺服器串流媒體且包含播放控制的功能。"
-
-msgctxt "#36326"
-msgid "Enable the UPnP control point. This allows you to stream media to any UPnP client and control it's playback."
-msgstr "啟用 UPnP 控制點。除了可以串流多媒體至 UPnP 用戶端之外，還可以控制其播放功能。"
 
 msgctxt "#36327"
 msgid "This category contains the settings for how the web server service and the application control service is handled."
@@ -14692,6 +14724,10 @@ msgstr "允許硬體加速 - MMAL"
 msgctxt "#36435"
 msgid "Use VideoPlayer for decoding of video files with MMAL acceleration."
 msgstr "使用MMAL加速器來協同影片撥放器的解碼程序。"
+
+msgctxt "#36436"
+msgid "Select OS keyboard layout."
+msgstr "選擇作業系統鍵盤佈局。"
 
 msgctxt "#36442"
 msgid "Set the number of volume control steps."
